--- a/browser_control/get_elements/🔦 行为模式.md
+++ b/browser_control/get_elements/🔦 行为模式.md
@@ -1,10 +1,11 @@
 # 🔦 行为模式
 
-## ✅️ 等待元素​
+## ✅️ 等待元素
 
-由于网络、js 运行时间的不确定性，经常需要等待元素加载到 DOM 中才能使用。浏览器所有查找元素操作都自带等待，时间默认跟随元素所在页面timeout属性（默认 10 秒），也可以在每次查找时单独设置，单独设置的等待时间不会改变页面原来设置。
+由于网络、js 运行时间的不确定性，经常需要等待元素加载到 DOM 中才能使用。  
+浏览器所有查找元素操作都自带等待，时间默认跟随元素所在页面 `timeout` 属性（默认 10 秒），也可以在每次查找时单独设置，单独设置的等待时间不会改变页面原来设置。
 
-### 📌 内置等待​
+### 📌 内置等待
 
 ```python
 from DrissionPage import Chromium
@@ -23,33 +24,35 @@ ele2 = ele1.ele('search text')
 ele2 = ele1.ele('some text', timeout=1)
 ```
 
-### 📌 主动等待​
+### 📌 主动等待
 
-页面对象的`wait.eles_loaded()`方法，可主动等待指定元素加载到 DOM。用法详见等待章节。
+页面对象的 `wait.eles_loaded()` 方法，可主动等待指定元素加载到 DOM。  
+用法详见等待章节。
 
-## ✅️ 链式写法​
+## ✅️ 链式写法
 
-因为元素对象本身又可以查找对象，所有可实现多级链式操作，可使程序更简洁。
-
+因为元素对象本身又可以查找对象，所有可实现多级链式操作，可使程序更简洁。  
 示例：
 
 ```python
 ele = tab.ele('#s_fm').ele('#su')
 ```
 
-其中`ele()`可省略，简化写成：
+其中 `ele()` 可省略，简化写成：
 
 ```python
 ele = tab('#s_fm')('#su')
 ```
 
-## ✅️ 找不到元素时​
+## ✅️ 找不到元素时
 
-### 📌 默认情况​
+### 📌 默认情况
 
-默认情况下，找不到元素时不会立即抛出异常，而是返回一个`NoneElement`对象。这个对象用`if`判断表现为`False`，调用其功能会抛出`ElementNotFoundError`异常。这样可以用`if`判断是否找到元素，也可以用`try`去捕获异常。查找多个元素找不到时，返回空的`list`。
-
-示例，用`if`判断：
+默认情况下，找不到元素时不会立即抛出异常，而是返回一个 `NoneElement` 对象。  
+这个对象用 `if` 判断表现为 `False`，调用其功能会抛出 `ElementNotFoundError` 异常。  
+这样可以用 `if` 判断是否找到元素，也可以用 `try` 去捕获异常。  
+查找多个元素找不到时，返回空的 `list`。  
+示例，用 `if` 判断：
 
 ```python
 ele = tab.ele('****')
@@ -62,7 +65,7 @@ if not ele:
     print('没有找到。')
 ```
 
-示例，用`try`捕获：
+示例，用 `try` 捕获：
 
 ```python
 try:
@@ -71,10 +74,11 @@ except ElementNotFoundError:
     print('没有找到。')
 ```
 
-### 📌 立即抛出异常​
+### 📌 立即抛出异常
 
-如果想在找不到元素时立刻抛出异常，可以用以下方法设置。此设置为全局有效，在项目开始时设置一次即可。查找多个元素找不到时，依然返回空的`list`。
-
+如果想在找不到元素时立刻抛出异常，可以用以下方法设置。  
+此设置为全局有效，在项目开始时设置一次即可。  
+查找多个元素找不到时，依然返回空的 `list`。  
 设置全局变量：
 
 ```python
@@ -105,17 +109,17 @@ method: ele()
 args: {'locator': '#abcd'}
 ```
 
-### 📌 设置默认返回值​
+### 📌 设置默认返回值
 
-如果查找元素后要获取一个属性，但这个元素不一定存在，或者链式查找其中一个节点找不到，可以设置查找失败时返回的值，而不是抛出异常，可以简化一些采集逻辑。使用浏览器页面对象的`set.NoneElement_value()`方法设置该值。
+如果查找元素后要获取一个属性，但这个元素不一定存在，或者链式查找其中一个节点找不到，可以设置查找失败时返回的值，而不是抛出异常，可以简化一些采集逻辑。  
+使用浏览器页面对象的 `set.NoneElement_value()` 方法设置该值。
 
 | 参数名称 | 类型 | 默认值 | 说明 |
 | -------- | ---- | ------ | ---- |
 | value    | Any  | None   | 将返回的设定值 |
 | on_off   | bool | True   | bool表示是否启用 |
 
-返回：None
-
+返回：None  
 示例
 
 比如说，遍历页面上一个列表中多个对象，但其中有些元素可能缺失某个子元素，可以这样写：
@@ -131,5 +135,5 @@ for li in tab.eles('t:li'):
     phone = li('.phone').text
 ```
 
-这样，假如某个子元素不存在，不会抛出异常，而是返回'没找到'这个字符串。
+这样，假如某个子元素不存在，不会抛出异常，而是返回 `'没找到'` 这个字符串。
 ```
