--- a/SessionPage/🛩️ 创建页面对象.md
+++ b/SessionPage/🛩️ 创建页面对象.md
@@ -3,8 +3,8 @@
 ## ✅️️ SessionPage初始化参数​
 
 | 初始化参数       | 类型            | 默认值 | 说明                                                                 |
-|----------------|---------------|-----|--------------------------------------------------------------------|
-| session_or_options | Session<br>SessionOptions | None | 传入Session对象时使用该对象收发数据包；传入SessionOptions对象时用该配置创建Session对象；为None则从 ini 文件读取，为False则不从 ini 文件读取，而用内置默认配置 |
+|------------------|-----------------|--------|----------------------------------------------------------------------|
+| session_or_options | Session        | None   | 传入Session对象时使用该对象收发数据包；传入SessionOptions对象时用该配置创建Session对象；为None则从 ini 文件读取，为False则不从 ini 文件读取，而用内置默认配置 |
 
 ## ✅️️ 直接创建​
 
@@ -16,9 +16,7 @@ from DrissionPage import SessionPage
 page = SessionPage()
 ```
 
-SessionPage无需控制浏览器，无需做任何配置即可使用。  
-直接创建时，程序默认读取 ini 文件配置，如 ini 文件不存在，会使用内置配置。  
-默认 ini 和内置配置信息详见 “进阶使用->配置文件的使用” 章节。
+SessionPage无需控制浏览器，无需做任何配置即可使用。直接创建时，程序默认读取 ini 文件配置，如 ini 文件不存在，会使用内置配置。默认 ini 和内置配置信息详见 “进阶使用->配置文件的使用” 章节。
 
 ## ✅️️ 通过配置信息创建​
 
@@ -33,8 +31,7 @@ SessionPage无需控制浏览器，无需做任何配置即可使用。
 | read_file  | bool | True   | 是否从 ini 文件中读取配置信息 |
 | ini_path   | str  | None   | 文件路径，为None则读取默认 ini 文件 |
 
-**注意**  
-Session对象创建后再修改这个配置是没有效果的。
+注意：Session对象创建后再修改这个配置是没有效果的。
 
 ```python
 # 导入 SessionOptions
@@ -46,8 +43,7 @@ so = SessionOptions().set_proxies(http='127.0.0.1:1080')
 page = SessionPage(session_or_options=so)
 ```
 
-**Tips**  
-您可以把配置保存到配置文件以后自动读取，详见 “启动配置” 章节。
+Tips: 您可以把配置保存到配置文件以后自动读取，详见 “启动配置” 章节。
 
 ### 📌 从指定 ini 文件创建​
 
