--- a/SessionPage/🛩️ 概述.md
+++ b/SessionPage/🛩️ 概述.md
@@ -1,10 +1,8 @@
 🛩️ 概述
 
-SessionPage对象和WebPage对象的 s 模式，可用收发数据包的形式访问网页。  
-SessionPage是一个使用Session（requests 库）对象的页面，封装了网络连接和结果解析功能，使收发数据包也可以像操作页面一样便利。
+SessionPage对象和WebPage对象的 s 模式，可用收发数据包的形式访问网页。SessionPage是一个使用Session（requests 库）对象的页面，封装了网络连接和结果解析功能，使收发数据包也可以像操作页面一样便利。
 
-示例：  
-获取 gitee 推荐项目第一页所有项目。
+示例：获取 gitee 推荐项目第一页所有项目。
 
 # 导入
 ```python
@@ -46,5 +44,4 @@ william_lzw/ExDUIR.NET https://gitee.com/william_lzw/ExDUIR.NET
 anolis/ancert https://gitee.com/anolis/ancert
 cozodb/cozo https://gitee.com/cozodb/cozo
 后面省略...
-```
 ```
