--- a/advance/⚙️ 命令行的使用.md
+++ b/advance/⚙️ 命令行的使用.md
@@ -2,13 +2,13 @@
 
 DrissionPage 提供一些便捷的命令行命令，用于基本设置，以取代有时需要的临时配置文件。  
 命令行主命令为 `dp`，形式为：  
-`dp` 命令全称或缩写 `<参数>`
+`dp` 命令全称或缩写 <参数>
 
 ## ✅️ 设置浏览器路径
 
 | 全称                | 缩写 | 参数       | 说明                     |
 |---------------------|------|------------|--------------------------|
-| `--set-browser-path`| `-p` | 浏览器路径 | 设置配置文件中的浏览器路径 |
+| --set-browser-path  | -p   | 浏览器路径 | 设置配置文件中的浏览器路径 |
 
 示例：
 
@@ -24,7 +24,7 @@ dp -p "D:\chrome\Chrome.exe"
 
 | 全称            | 缩写 | 参数               | 说明                     |
 |-----------------|------|--------------------|--------------------------|
-| `--set-user-path`| `-u` | 用户数据文件夹路径 | 设置配置文件中的用户数据路径 |
+| --set-user-path | -u   | 用户数据文件夹路径 | 设置配置文件中的用户数据路径 |
 
 示例：
 
@@ -38,9 +38,9 @@ dp -u D:\chrome\user_data
 
 ## ✅️ 复制默认 ini 文件到当前路径
 
-| 全称               | 缩写 | 参数 | 说明                           |
-|--------------------|------|------|--------------------------------|
-| `--configs-to-here`| `-c` | 无   | 复制默认配置文件到当前路径     |
+| 全称              | 缩写 | 参数 | 说明                         |
+|-------------------|------|------|------------------------------|
+| --configs-to-here | -c   | 无   | 复制默认配置文件到当前路径   |
 
 示例：
 
@@ -56,9 +56,9 @@ dp -c
 
 此命令用于启动浏览器，等待程序接管。
 
-| 全称              | 缩写 | 参数   | 说明                                   |
-|-------------------|------|--------|----------------------------------------|
-| `--launch-browser`| `-l` | 端口号 | 启动浏览器，传入端口号，0表示用配置文件中的值 |
+| 全称             | 缩写 | 参数   | 说明                               |
+|------------------|------|--------|------------------------------------|
+| --launch-browser | -l   | 端口号 | 启动浏览器，传入端口号，0表示用配置文件中的值 |
 
 示例：
 
@@ -68,5 +68,4 @@ dp --launch-browser 9333
 
 # 简略写法
 dp -l 0
-```
 ```
