--- a/advance/⚙️ 配置文件的使用.md
+++ b/advance/⚙️ 配置文件的使用.md
@@ -1,16 +1,14 @@
 # ⚙️ 配置文件的使用
 
-本库使用 ini 文件记录浏览器或Session对象的启动配置。便于配置复用，免于在代码中加入繁琐的配置信息。  
-默认情况下，页面对象启动时自动加载文件中的配置信息。  
-也可以在默认配置基础上用简单的方法再次修改，再保存到 ini 文件。  
-也可以保存多个 ini 文件，按不同项目需要调用。
+本库使用 ini 文件记录浏览器或Session对象的启动配置。便于配置复用，免于在代码中加入繁琐的配置信息。默认情况下，页面对象启动时自动加载文件中的配置信息。也可以在默认配置基础上用简单的方法再次修改，再保存到 ini 文件。也可以保存多个 ini 文件，按不同项目需要调用。
 
-**注意**  
-ini 文件仅用于管理启动配置，页面对象创建后再修改 ini 文件是没用的。  
-如果是接管已打开的浏览器，这些设置也没有用。  
-每次升级本库，ini 文件都会被重置，可另存到其它路径以免重置。
+**注意**
 
-## ✅️ ini 文件内容
+- ini 文件仅用于管理启动配置，页面对象创建后再修改 ini 文件是没用的。
+- 如果是接管已打开的浏览器，这些设置也没有用。
+- 每次升级本库，ini 文件都会被重置，可另存到其它路径以免重置。
+
+## ✅️️ ini 文件内容
 
 ini 文件初始内容如下。
 
@@ -50,12 +48,11 @@ retry_times = 3
 retry_interval = 2
 ```
 
-## ✅️ 文件位置
+## ✅️️ 文件位置
 
-默认配置文件存放在 DrissionPage 库 `_configs` 文件夹下，文件名为 `configs.ini`。  
-用户可另存其它配置文件，或从另存的文件读取配置，但默认文件的位置和名称不会改变。
+默认配置文件存放在 DrissionPage 库 `_configs` 文件夹下，文件名为 `configs.ini`。用户可另存其它配置文件，或从另存的文件读取配置，但默认文件的位置和名称不会改变。
 
-## ✅️ 使用默认配置文件启动
+## ✅️️ 使用默认配置文件启动
 
 ### 📌 使用页面对象自动加载
 
@@ -80,7 +77,7 @@ so = SessionOptions(ini_path=r'D:\setting.ini')
 browser = Chromium(addr_or_opts=co, session_options=so)
 ```
 
-## ✅️ 保存/另存 ini 文件
+## ✅️️ 保存/另存 ini 文件
 
 ```python
 from DrissionPage import ChromiumOptions
@@ -98,24 +95,22 @@ co.save(r'D:\config1.ini')
 co.save_to_default()
 ```
 
-## ✅️ 在项目路径使用 ini 文件
+## ✅️️ 在项目路径使用 ini 文件
 
-默认 ini 文件存放在 DrissionPage 安装目录下，修改要通过代码进行，给调试带来不便。  
-因此，提供了一个便捷的方法把默认 ini 文件复制到当前项目文件夹，并且程序会优先使用项目文件夹下的 ini 文件进行初始化配置。  
-这样开发者可方便地手动更改配置。项目打包也可以直接打包而不会造成找不到文件问题。  
-复制到项目下的 ini 文件名为 `dp_configs.ini`，程序会默认读取这个文件的配置。
+默认 ini 文件存放在 DrissionPage 安装目录下，修改要通过代码进行，给调试带来不便。因此，提供了一个便捷的方法把默认 ini 文件复制到当前项目文件夹，并且程序会优先使用项目文件夹下的 ini 文件进行初始化配置。这样开发者可方便地手动更改配置。项目打包也可以直接打包而不会造成找不到文件问题。复制到项目下的 ini 文件名为 `dp_configs.ini`，程序会默认读取这个文件的配置。
 
 ### 📌 configs_to_here()
 
 此方法放在 `DrissionPage.common` 路径中，用于把默认 ini 文件复制到当前路径，并命名为 `dp_configs.ini`。
 
-| 参数名称   | 类型 | 默认值 | 说明                             |
-|------------|------|--------|----------------------------------|
+| 参数名称   | 类型 | 默认值 | 说明                           |
+|------------|------|--------|--------------------------------|
 | save_name  | str  | None   | 指定文件名，为 None 则命名为 `dp_configs.ini` |
 
 返回：None
 
-示例：  
+**示例：**
+
 在项目新建一个 py 文件，输入以下内容并运行
 
 ```python
@@ -128,8 +123,7 @@ configs_to_here()
 
 ### 📌 用命令行复制
 
-除了用 `configs_to_here()` 方法复制 ini 文件到项目文件夹，还可以用命令行方式复制。  
-在项目文件夹路径下运行以下命令即可：
+除了用 `configs_to_here()` 方法复制 ini 文件到项目文件夹，还可以用命令行方式复制。在项目文件夹路径下运行以下命令即可：
 
 ```bash
 dp --configs-to-here
