--- a/browser_control/get_elements/🔦 概述.md
+++ b/browser_control/get_elements/🔦 概述.md
@@ -11,7 +11,7 @@
 
 因此作者极不建议使用右键复制的元素路径。  
 本库提供一套简洁易用的语法，用于快速定位元素，并且内置等待功能、支持链式查找，减少了代码的复杂性。  
-同时也兼容 CSS Selector、XPath 和 Selenium 原生的 loc 元组。
+同时也兼容 css selector、xpath 和 selenium 原生的 loc 元组。
 
 ## ✅️️ 基本用法
 
@@ -23,7 +23,7 @@
 * 根据 DOM 结构相对定位
 * 根据视觉位置相对定位
 
-所有的查找元素方法，都可以使用本库自创的查找语法、XPath、CSS Selector 和 Selenium 的定位符元组，去查找元素。
+所有的查找元素方法，都可以使用本库自创的查找语法、xpath、css selector和 selenium 的定位符元组，去查找元素。
 
 ## ✅️️ 示例
 
