--- a/browser_control/🛰️ 上传文件.md
+++ b/browser_control/🛰️ 上传文件.md
@@ -1,4 +1,4 @@
-🛰️ 上传文件
+# 🛰️ 上传文件
 
 上传文件有两种方式：
 
@@ -13,12 +13,12 @@
 
 浏览器元素对象拥有此方法，用于上传文件到网页。
 
-| 参数名称   | 类型          | 默认值 | 说明                                                                 |
-|------------|---------------|--------|----------------------------------------------------------------------|
+| 参数名称   | 类型                | 默认值 | 说明                                                                 |
+|------------|---------------------|--------|----------------------------------------------------------------------|
 | file_paths | str, Path, list, tuple | 必填   | 文件路径，如果上传框支持多文件，可传入列表或字符串，字符串时多个文件用 `\n` 分隔 |
-| by_js      | bool          | False  | 是否用 js 方式点击，逻辑与 `click()` 一致                            |
+| by_js      | bool                | False  | 是否用 js 方式点击，逻辑与 `click()` 一致                            |
 
-返回：None
+返回：`None`
 
 **示例**
 
@@ -76,7 +76,7 @@ iframe.wait.upload_paths_inputted()
 
 如果 `<iframe>` 和主页面是同域的，则用域名对象和 `<iframe>` 对象设置均可。
 
-## ✅️ 传统方式
+## ✅️️ 传统方式
 
 传统方式，需要开发者在 DOM 里找到文件上传控件，然后用元素对象的 `input()` 方法填入路径。文件上传控件是 `type` 属性为 `'file'` 的 `<input>` 元素进行输入，把文件路径输入到元素即可，用法与输入文本一致。稍有不同的是，无论 `clear` 参数是什么，都会清空原控件内容。如果控件支持多文件上传，多个路径用 `list`、`tuple` 或以 `\n` 分隔的字符串传入。
 
