--- a/SessionPage/🛩️ 页面设置.md
+++ b/SessionPage/🛩️ 页面设置.md
@@ -1,7 +1,6 @@
 # 🛩️ 页面设置
 
-本节介绍SessionPage运行参数设置。  
-这些设置是全局参数，设置后每次请求都会使用它们。
+本节介绍SessionPage运行参数设置。这些设置是全局参数，设置后每次请求都会使用它们。
 
 示例：
 
@@ -17,7 +16,7 @@ page.set.cookies([{'name': 'a', 'value': '1'}, {'name': 'b', 'value': '2'}])
 此方法用于设置连接失败时重连次数。
 
 | 参数名称 | 类型 | 默认值 | 说明 |
-| -------- | ---- | ------ | ---- |
+|----------|------|--------|------|
 | times    | int  | 必填   | 次数 |
 
 返回：None
@@ -27,7 +26,7 @@ page.set.cookies([{'name': 'a', 'value': '1'}, {'name': 'b', 'value': '2'}])
 此方法用于设置连接失败时重连间隔。
 
 | 参数名称 | 类型  | 默认值 | 说明 |
-| -------- | ----- | ------ | ---- |
+|----------|-------|--------|------|
 | interval | float | 必填   | 秒数 |
 
 返回：None
@@ -37,7 +36,7 @@ page.set.cookies([{'name': 'a', 'value': '1'}, {'name': 'b', 'value': '2'}])
 此方法用于设置连接超时时间（秒）。
 
 | 参数名称 | 类型  | 默认值 | 说明 |
-| -------- | ----- | ------ | ---- |
+|----------|-------|--------|------|
 | second   | float | 必填   | 秒数 |
 
 返回：None
@@ -50,12 +49,10 @@ page.set.timeout(20)
 
 ## ✅️ set.encoding()
 
-此方法用于设置网页编码。  
-默认情况下，程序会自动从 headers、页面上获取编码，但总有些奇葩网页的编码不准确。这时候可以主动设置编码。  
-可以针对已获取的Response对象设置，或作为整体设置对之后的连接都有效。
+此方法用于设置网页编码。默认情况下，程序会自动从 headers、页面上获取编码，但总有些奇葩网页的编码不准确。这时候可以主动设置编码。可以针对已获取的Response对象设置，或作为整体设置对之后的连接都有效。
 
 | 参数名称 | 类型 | 默认值 | 说明 |
-| -------- | ---- | ------ | ---- |
+|----------|------|--------|------|
 | encoding | str  | 必填   | 编码名称，如果要取消之前的设置，传入None |
 | set_all  | bool | True   | 是否设置对象参数，为False则只设置当前Response对象 |
 
@@ -79,7 +76,7 @@ page.set.timeout(20)
 - `CookieJar`：单个CookieJar对象
 
 | 参数名称 | 类型 | 默认值 | 说明 |
-| -------- | ---- | ------ | ---- |
+|----------|------|--------|------|
 | cookies  | Cookie, CookieJar, list, tuple, str, dict | 必填 | cookies 信息 |
 
 返回：None
@@ -97,19 +94,17 @@ page.set.timeout(20)
 此方法用于删除一个 cookie。
 
 | 参数名称 | 类型 | 默认值 | 说明 |
-| -------- | ---- | ------ | ---- |
+|----------|------|--------|------|
 | name     | str  | 必填   | cookie 的 name 字段 |
 
 返回：None
 
 ## ✅️ set.headers()
 
-此方法用于设置 headers，会取代已有 headers。  
-headers 可以是`dict`格式的，也可以是文本格式。  
-文本格式不同字段用`\n`分隔，字段 key 和 value 用`: `分隔，即从浏览器直接复制的格式。
+此方法用于设置 headers，会取代已有 headers。headers 可以是dict格式的，也可以是文本格式。文本格式不同字段用`\n`分隔，字段 key 和 value 用': '分隔，即从浏览器直接复制的格式。
 
 | 参数名称 | 类型 | 默认值 | 说明 |
-| -------- | ---- | ------ | ---- |
+|----------|------|--------|------|
 | headers  | dict, str | 必填 | headers 信息 |
 
 返回：None
@@ -119,7 +114,7 @@ headers 可以是`dict`格式的，也可以是文本格式。
 此方法用于设置 headers 中一个项。
 
 | 参数名称 | 类型 | 默认值 | 说明 |
-| -------- | ---- | ------ | ---- |
+|----------|------|--------|------|
 | name     | str  | 必填   | 设置名称 |
 | value    | str  | 必填   | 设置值 |
 
@@ -130,7 +125,7 @@ headers 可以是`dict`格式的，也可以是文本格式。
 此方法用于设置 user_agent。
 
 | 参数名称 | 类型 | 默认值 | 说明 |
-| -------- | ---- | ------ | ---- |
+|----------|------|--------|------|
 | ua       | str  | 必填   | user_agent 信息 |
 
 返回：None
@@ -140,7 +135,7 @@ headers 可以是`dict`格式的，也可以是文本格式。
 此方法用于设置代理 ip。
 
 | 参数名称 | 类型 | 默认值 | 说明 |
-| -------- | ---- | ------ | ---- |
+|----------|------|--------|------|
 | http     | str  | 必填   | http代理地址 |
 | https    | str  | None   | https代理地址，为None时使用http的值 |
 
@@ -151,7 +146,7 @@ headers 可以是`dict`格式的，也可以是文本格式。
 此方法用于设置认证元组或对象。
 
 | 参数名称 | 类型 | 默认值 | 说明 |
-| -------- | ---- | ------ | ---- |
+|----------|------|--------|------|
 | auth     | Tuple[str, str], HTTPBasicAuth | 必填 | 认证元组或对象 |
 
 返回：None
@@ -161,7 +156,7 @@ headers 可以是`dict`格式的，也可以是文本格式。
 此方法用于设置回调方法。
 
 | 参数名称 | 类型 | 默认值 | 说明 |
-| -------- | ---- | ------ | ---- |
+|----------|------|--------|------|
 | hooks    | dict | 必填   | 回调方法 |
 
 返回：None
@@ -171,7 +166,7 @@ headers 可以是`dict`格式的，也可以是文本格式。
 此方法用于设置查询参数字典。
 
 | 参数名称 | 类型 | 默认值 | 说明 |
-| -------- | ---- | ------ | ---- |
+|----------|------|--------|------|
 | params   | dict | 必填   | 查询参数字典 |
 
 返回：None
@@ -181,7 +176,7 @@ headers 可以是`dict`格式的，也可以是文本格式。
 此方法用于设置是否验证SSL证书。
 
 | 参数名称 | 类型 | 默认值 | 说明 |
-| -------- | ---- | ------ | ---- |
+|----------|------|--------|------|
 | on_off   | bool | 必填   | bool表示开或关 |
 
 返回：None
@@ -191,7 +186,7 @@ headers 可以是`dict`格式的，也可以是文本格式。
 此方法用于设置SSL客户端证书。
 
 | 参数名称 | 类型 | 默认值 | 说明 |
-| -------- | ---- | ------ | ---- |
+|----------|------|--------|------|
 | cert     | str, Tuple[str, str] | 必填 | SSL客户端证书文件的路径(.pem格式)，或(‘cert’, ‘key’)元组 |
 
 返回：None
@@ -201,7 +196,7 @@ headers 可以是`dict`格式的，也可以是文本格式。
 此方法用于设置是否使用流式响应内容。
 
 | 参数名称 | 类型 | 默认值 | 说明 |
-| -------- | ---- | ------ | ---- |
+|----------|------|--------|------|
 | on_off   | bool | 必填   | bool表示开或关 |
 
 返回：None
@@ -211,7 +206,7 @@ headers 可以是`dict`格式的，也可以是文本格式。
 此方法用于设置是否信任环境。
 
 | 参数名称 | 类型 | 默认值 | 说明 |
-| -------- | ---- | ------ | ---- |
+|----------|------|--------|------|
 | on_off   | bool | 必填   | bool表示开或关 |
 
 返回：None
@@ -221,7 +216,7 @@ headers 可以是`dict`格式的，也可以是文本格式。
 此方法用于设置连接最大重定向次数。
 
 | 参数名称 | 类型 | 默认值 | 说明 |
-| -------- | ---- | ------ | ---- |
+|----------|------|--------|------|
 | times    | int  | 必填   | 最大重定向次数 |
 
 返回：None
@@ -231,7 +226,7 @@ headers 可以是`dict`格式的，也可以是文本格式。
 此方法用于添加适配器。
 
 | 参数名称 | 类型 | 默认值 | 说明 |
-| -------- | ---- | ------ | ---- |
+|----------|------|--------|------|
 | url      | str  | 必填   | 适配器对应url |
 | adapter  | HTTPAdapter | 必填 | 适配器对象 |
 
@@ -244,4 +239,3 @@ headers 可以是`dict`格式的，也可以是文本格式。
 参数： 无
 
 返回：None
-```
