--- a/browser_control/get_elements/🔦 行为模式.md
+++ b/browser_control/get_elements/🔦 行为模式.md
@@ -2,8 +2,7 @@
 
 ## ✅️ 等待元素
 
-由于网络、js 运行时间的不确定性，经常需要等待元素加载到 DOM 中才能使用。  
-浏览器所有查找元素操作都自带等待，时间默认跟随元素所在页面 `timeout` 属性（默认 10 秒），也可以在每次查找时单独设置，单独设置的等待时间不会改变页面原来设置。
+由于网络、js 运行时间的不确定性，经常需要等待元素加载到 DOM 中才能使用。浏览器所有查找元素操作都自带等待，时间默认跟随元素所在页面timeout属性（默认 10 秒），也可以在每次查找时单独设置，单独设置的等待时间不会改变页面原来设置。
 
 ### 📌 内置等待
 
@@ -26,12 +25,12 @@ ele2 = ele1.ele('some text', timeout=1)
 
 ### 📌 主动等待
 
-页面对象的 `wait.eles_loaded()` 方法，可主动等待指定元素加载到 DOM。  
-用法详见等待章节。
+页面对象的 `wait.eles_loaded()` 方法，可主动等待指定元素加载到 DOM。用法详见等待章节。
 
 ## ✅️ 链式写法
 
-因为元素对象本身又可以查找对象，所有可实现多级链式操作，可使程序更简洁。  
+因为元素对象本身又可以查找对象，所有可实现多级链式操作，可使程序更简洁。
+
 示例：
 
 ```python
@@ -48,10 +47,8 @@ ele = tab('#s_fm')('#su')
 
 ### 📌 默认情况
 
-默认情况下，找不到元素时不会立即抛出异常，而是返回一个 `NoneElement` 对象。  
-这个对象用 `if` 判断表现为 `False`，调用其功能会抛出 `ElementNotFoundError` 异常。  
-这样可以用 `if` 判断是否找到元素，也可以用 `try` 去捕获异常。  
-查找多个元素找不到时，返回空的 `list`。  
+默认情况下，找不到元素时不会立即抛出异常，而是返回一个 `NoneElement` 对象。这个对象用 `if` 判断表现为 `False`，调用其功能会抛出 `ElementNotFoundError` 异常。这样可以用 `if` 判断是否找到元素，也可以用 `try` 去捕获异常。查找多个元素找不到时，返回空的 `list`。
+
 示例，用 `if` 判断：
 
 ```python
@@ -76,9 +73,8 @@ except ElementNotFoundError:
 
 ### 📌 立即抛出异常
 
-如果想在找不到元素时立刻抛出异常，可以用以下方法设置。  
-此设置为全局有效，在项目开始时设置一次即可。  
-查找多个元素找不到时，依然返回空的 `list`。  
+如果想在找不到元素时立刻抛出异常，可以用以下方法设置。此设置为全局有效，在项目开始时设置一次即可。查找多个元素找不到时，依然返回空的 `list`。
+
 设置全局变量：
 
 ```python
@@ -111,15 +107,15 @@ args: {'locator': '#abcd'}
 
 ### 📌 设置默认返回值
 
-如果查找元素后要获取一个属性，但这个元素不一定存在，或者链式查找其中一个节点找不到，可以设置查找失败时返回的值，而不是抛出异常，可以简化一些采集逻辑。  
-使用浏览器页面对象的 `set.NoneElement_value()` 方法设置该值。
+如果查找元素后要获取一个属性，但这个元素不一定存在，或者链式查找其中一个节点找不到，可以设置查找失败时返回的值，而不是抛出异常，可以简化一些采集逻辑。使用浏览器页面对象的 `set.NoneElement_value()` 方法设置该值。
 
 | 参数名称 | 类型 | 默认值 | 说明 |
-| -------- | ---- | ------ | ---- |
+|----------|------|--------|------|
 | value    | Any  | None   | 将返回的设定值 |
 | on_off   | bool | True   | bool表示是否启用 |
 
-返回：None  
+返回：None
+
 示例
 
 比如说，遍历页面上一个列表中多个对象，但其中有些元素可能缺失某个子元素，可以这样写：
@@ -135,5 +131,5 @@ for li in tab.eles('t:li'):
     phone = li('.phone').text
 ```
 
-这样，假如某个子元素不存在，不会抛出异常，而是返回 `'没找到'` 这个字符串。
+这样，假如某个子元素不存在，不会抛出异常，而是返回'没找到'这个字符串。
 ```
