--- a/browser_control/🛰️ 元素交互.md
+++ b/browser_control/🛰️ 元素交互.md
@@ -8,18 +8,18 @@
 
 这两个方法作用是一样的，用于左键点击元素。可选择模拟点击或 js 点击。
 
-| 参数名称  | 类型  | 默认值 | 说明                                                                 |
-| -------- | ---- | ----- | -------------------------------------------------------------------- |
-| by_js    | bool | False | 指定点击行为方式。<br>为None时，如不被遮挡，用模拟点击，否则用 js 点击<br>为True时直接用 js 点击；<br>为False时强制模拟点击，被遮挡也会进行点击 |
-| timeout  | float| 1.5   | 模拟点击的超时时间（秒），等待元素可见、可用、进入视口                          |
-| wait_stop| bool | True  | 点击前是否等待元素停止运动                                               |
+| 参数名称 | 类型  | 默认值 | 说明                                                                 |
+|----------|-------|--------|----------------------------------------------------------------------|
+| by_js    | bool  | False  | 指定点击行为方式。<br>为None时，如不被遮挡，用模拟点击，否则用 js 点击<br>为True时直接用 js 点击；<br>为False时强制模拟点击，被遮挡也会进行点击 |
+| timeout  | float | 1.5    | 模拟点击的超时时间（秒），等待元素可见、可用、进入视口                  |
+| wait_stop| bool  | True   | 点击前是否等待元素停止运动                                            |
 
-**返回值**: 
+| 返回值 | 说明                                                                 |
+|--------|----------------------------------------------------------------------|
+| False  | by_js为False，且元素不可用、不可见时，返回False                      |
+| True   | 除以上情况，其余情况都返回True                                        |
 
-- `False`: by_js为False，且元素不可用、不可见时，返回False
-- `True`: 除以上情况，其余情况都返回True
-
-**示例**：
+示例：
 
 ```python
 # 对ele元素进行模拟点击，如判断被遮挡也会点击
@@ -45,11 +45,11 @@ ele.click()  # 如无法点击则抛出异常
 
 此方法实现右键单击元素。
 
-**参数**: 无
+参数： 无
 
-**返回**: None
+返回：None
 
-**示例**：
+示例：
 
 ```python
 ele.click.right()
@@ -59,17 +59,17 @@ ele.click.right()
 
 此方法实现中键单击元素。
 
-| 参数名称 | 类型 | 默认值 | 说明 |
-| -------- | ---- | ----- | ---- |
-| get_tab  | bool | True  | 是否返回新出现的 Tab 对象 |
+| 参数名称 | 类型 | 默认值 | 说明                       |
+|----------|------|--------|----------------------------|
+| get_tab  | bool | True   | 是否返回新出现的 Tab 对象 |
 
-**返回类型**: 
+| 返回类型   | 说明                                           |
+|------------|------------------------------------------------|
+| ChromiumTab| 如get_tab参数为True，元素在ChromiumTab返回对象 |
+| MixTab     | 如get_tab参数为True，元素在MixTab里时返回的对象|
+| None       | get_tab参数为False时                           |
 
-- `ChromiumTab`: 如get_tab参数为True，元素在ChromiumTab返回对象
-- `MixTab`: 如get_tab参数为True，元素在MixTab里时返回的对象
-- `None`: get_tab参数为False时
-
-**示例**：
+示例：
 
 ```python
 tab = ele.click.middle()
@@ -80,26 +80,26 @@ print(tab.title)
 
 此方法实现左键多次点击元素。
 
-| 参数名称 | 类型 | 默认值 | 说明 |
-| -------- | ---- | ----- | ---- |
-| times    | int  | 2     | 点击次数 |
+| 参数名称 | 类型 | 默认值 | 说明     |
+|----------|------|--------|----------|
+| times    | int  | 2      | 点击次数 |
 
-**返回**: None
+返回：None
 
 ### 📌 click.at()
 
 此方法用于带偏移量点击元素，偏移量相对于元素左上角坐标。不传入offset_x和offset_y时点击元素中间点。点击的目标不一定在元素上，可以传入负值，或大于元素大小的值，点击元素附近的区域。向右和向下为正值，向左和向上为负值。
 
-| 参数名称 | 类型 | 默认值 | 说明 |
-| -------- | ---- | ----- | ---- |
-| offset_x | float| None  | 相对元素左上角坐标的 x 轴偏移量，向下向右为正 |
-| offset_y | float| None  | 相对元素左上角坐标的 y 轴偏移量，向下向右为正 |
-| button   | str  | 'left'| 要点击的键，传入'left'、'right'、'middle'、'back'、'forward' |
-| count    | int  | 1     | 点击次数 |
+| 参数名称 | 类型  | 默认值 | 说明                                       |
+|----------|-------|--------|--------------------------------------------|
+| offset_x | float | None   | 相对元素左上角坐标的 x 轴偏移量，向下向右为正 |
+| offset_y | float | None   | 相对元素左上角坐标的 y 轴偏移量，向下向右为正 |
+| button   | str   | 'left' | 要点击的键，传入'left'、'right'、'middle'、'back'、'forward' |
+| count    | int   | 1      | 点击次数                                   |
 
-**返回**: None
+返回：None
 
-**示例**：
+示例：
 
 ```python
 # 点击元素右上方 50*50 的位置
@@ -116,42 +116,42 @@ ele.click.at()
 
 此方法用于点击元素，触发文件选择框并把指定的文件路径添加到网页，详见“文件上传”章节。
 
-| 参数名称  | 类型  | 默认值 | 说明 |
-| -------- | ---- | ----- | ---- |
-| file_paths| str, Path, list, tuple | 必填 | 文件路径，如果上传框支持多文件，可传入列表或字符串，字符串时多个文件用\n分隔 |
-| by_js    | bool | False | 是否用 js 方式点击，逻辑与click()一致 |
+| 参数名称 | 类型  | 默认值 | 说明                                                                 |
+|----------|-------|--------|----------------------------------------------------------------------|
+| file_paths| str, Path, list, tuple | 必填   | 文件路径，如果上传框支持多文件，可传入列表或字符串，字符串时多个文件用\n分隔 |
+| by_js    | bool  | False  | 是否用 js 方式点击，逻辑与click()一致                                |
 
-**返回**: None
+返回：None
 
 ### 📌 click.to_download()
 
 此方法用于点击元素触发下载，并返回下载任务对象。用法详见“文件下载”章节。
 
-| 参数名称 | 类型  | 默认值 | 说明 |
-| -------- | ---- | ----- | ---- |
-| save_path| str, Path | 必填 | 保存路径，为None保存在原来设置的，如未设置保存到当前路径 |
-| rename   | str  | None  | 重命名文件名，为None则不修改 |
-| suffix   | str  | 'left'| 指定文件后缀，为None则不修改 |
-| new_tab  | bool | 1     | 该下载是否在新 tab 中触发 |
-| by_js    | bool | False | 是否用 js 方式点击，逻辑与click()一致 |
-| timeout  | float| None  | 超时时间（秒），为None时使用页面对象默认超时时间 |
+| 参数名称 | 类型  | 默认值 | 说明                                                                 |
+|----------|-------|--------|----------------------------------------------------------------------|
+| save_path| str, Path | 必填   | 保存路径，为None保存在原来设置的，如未设置保存到当前路径            |
+| rename   | str   | None   | 重命名文件名，为None则不修改                                        |
+| suffix   | str   | 'left' | 指定文件后缀，为None则不修改                                        |
+| new_tab  | bool  | 1      | 该下载是否在新 tab 中触发                                           |
+| by_js    | bool  | False  | 是否用 js 方式点击，逻辑与click()一致                                |
+| timeout  | float | None   | 超时时间（秒），为None时使用页面对象默认超时时间                     |
 
-**返回类型**: 
-
-- `DownloadMission`: 下载任务对象
+| 返回类型       | 说明           |
+|----------------|----------------|
+| DownloadMission| 下载任务对象   |
 
 ### 📌 click.for_new_tab()
 
 在预期点击后会出现新 tab 的时候，可用此方法点击，会等待并返回新 tab 对象。
 
-| 参数名称 | 类型 | 默认值 | 说明 |
-| -------- | ---- | ----- | ---- |
-| by_js    | bool | False | 是否用 js 方式点击，逻辑与click()一致 |
+| 参数名称 | 类型 | 默认值 | 说明                       |
+|----------|------|--------|----------------------------|
+| by_js    | bool | False  | 是否用 js 方式点击，逻辑与click()一致 |
 
-**返回类型**: 
-
-- `ChromiumTab`: 元素在ChromiumTab里时返回
-- `MixTab`: 元素在MixTab里时返回
+| 返回类型   | 说明                                           |
+|------------|------------------------------------------------|
+| ChromiumTab| 元素在ChromiumTab里时返回                      |
+| MixTab     | 元素在MixTab里时返回                           |
 
 ## ✅️️ 输入内容
 
@@ -159,13 +159,13 @@ ele.click.at()
 
 此方法用于清空元素文本，可选择模拟按键或 js 方式。模拟按键方式会自动输入ctrl-a-del组合键来清除文本框，js 方式则直接把元素value属性设置为''。
 
-| 参数名称 | 类型 | 默认值 | 说明 |
-| -------- | ---- | ----- | ---- |
-| by_js    | bool | False | 是否用 js 方式清空 |
+| 参数名称 | 类型 | 默认值 | 说明                       |
+|----------|------|--------|----------------------------|
+| by_js    | bool | False  | 是否用 js 方式清空         |
 
-**返回**: None
+返回：None
 
-**示例**：
+示例：
 
 ```python
 ele.clear()
@@ -175,17 +175,17 @@ ele.clear()
 
 此方法用于向元素输入文本或组合键，也可用于输入文件路径到上传控件。可选择输入前是否清空元素。
 
-| 参数名称 | 类型 | 默认值 | 说明 |
-| -------- | ---- | ----- | ---- |
-| vals     | Any  | False | 文本值或按键组合<br>对文件上传控件时输入路径字符串或其组成的列表 |
-| clear    | bool | False | 输入前是否清空文本框 |
-| by_js    | bool | False | 是否用 js 方式输入，为True时不能输入组合键 |
+| 参数名称 | 类型 | 默认值 | 说明                                                                 |
+|----------|------|--------|----------------------------------------------------------------------|
+| vals     | Any  | False  | 文本值或按键组合<br>对文件上传控件时输入路径字符串或其组成的列表       |
+| clear    | bool | False  | 输入前是否清空文本框                                                 |
+| by_js    | bool | False  | 是否用 js 方式输入，为True时不能输入组合键                            |
 
-**返回**: None
+返回：None
 
-**Tips**: 有些文本框可以接收回车代替点击按钮，可以直接在文本末尾加上'\n'。会自动把非str数据转换为str。
+Tips: 有些文本框可以接收回车代替点击按钮，可以直接在文本末尾加上'\n'。会自动把非str数据转换为str。
 
-**示例**：
+示例：
 
 ```python
 # 输入文本
@@ -219,27 +219,27 @@ ele.input(Keys.CTRL_A)  # 全选
 
 此方法用于使元素获取焦点。
 
-**参数**: 无
+参数： 无
 
-**返回**: None
+返回：None
 
 ## ✅️️ 拖拽和悬停
 
-**Tips**: 除了以下方法，本库还提供更灵活的动作链功能，详见后面章节。
+Tips: 除了以下方法，本库还提供更灵活的动作链功能，详见后面章节。
 
 ### 📌 drag()
 
 此方法用于拖拽元素到相对于当前的一个新位置，可以设置速度。
 
-| 参数名称 | 类型 | 默认值 | 说明 |
-| -------- | ---- | ----- | ---- |
-| offset_x | int  | 0     | x 轴偏移量，向下向右为正 |
-| offset_y | int  | 0     | y 轴偏移量，向下向右为正 |
-| duration | float| 0.5   | 用时，单位秒，传入0即瞬间到达 |
+| 参数名称 | 类型  | 默认值 | 说明                       |
+|----------|-------|--------|----------------------------|
+| offset_x | int   | 0      | x 轴偏移量，向下向右为正   |
+| offset_y | int   | 0      | y 轴偏移量，向下向右为正   |
+| duration | float | 0.5    | 用时，单位秒，传入0即瞬间到达 |
 
-**返回**: None
+返回：None
 
-**示例**：
+示例：
 
 ```python
 # 拖动当前元素到距离50*50的位置，用时1秒
@@ -250,14 +250,14 @@ ele.drag(50, 50, 1)
 
 此方法用于拖拽元素到另一个元素上或一个坐标上。
 
-| 参数名称 | 类型 | 默认值 | 说明 |
-| -------- | ---- | ----- | ---- |
-| ele_or_loc| ChromiumElement, Tuple[int, int] | 必填 | 另一个元素对象或坐标元组 |
-| duration | float| 0.5   | 用时，单位秒，传入0即瞬间到达 |
+| 参数名称 | 类型  | 默认值 | 说明                       |
+|----------|-------|--------|----------------------------|
+| ele_or_loc | ChromiumElement, Tuple[int, int] | 必填   | 另一个元素对象或坐标元组       |
+| duration | float | 0.5    | 用时，单位秒，传入0即瞬间到达 |
 
-**返回**: None
+返回：None
 
-**示例**：
+示例：
 
 ```python
 # 把 ele1 拖拽到 ele2 上
@@ -273,14 +273,14 @@ ele1.drag_to((50, 50))
 
 此方法用于模拟鼠标悬停在元素上，可接受偏移量，偏移量相对于元素左上角坐标。不传入offset_x和offset_y值时悬停在元素中点。
 
-| 参数名称 | 类型 | 默认值 | 说明 |
-| -------- | ---- | ----- | ---- |
-| offset_x | int  | None  | 相对元素左上角坐标的 x 轴偏移量，向下向右为正 |
-| offset_y | int  | None  | 相对元素左上角坐标的 y 轴偏移量，向下向右为正 |
+| 参数名称 | 类型  | 默认值 | 说明                       |
+|----------|-------|--------|----------------------------|
+| offset_x | int   | None   | 相对元素左上角坐标的 x 轴偏移量，向下向右为正 |
+| offset_y | int   | None   | 相对元素左上角坐标的 y 轴偏移量，向下向右为正 |
 
-**返回**: None
+返回：None
 
-**示例**：
+示例：
 
 ```python
 # 悬停在元素右上方 50*50 的位置
@@ -299,24 +299,24 @@ ele.hover()
 
 此方法用于设置元素的 innerHTML 内容。
 
-| 参数名称 | 类型 | 默认值 | 说明 |
-| -------- | ---- | ----- | ---- |
-| html     | str  | 必填  | html文本 |
+| 参数名称 | 类型 | 默认值 | 说明                       |
+|----------|------|--------|----------------------------|
+| html     | str  | 必填   | html文本                   |
 
-**返回**: None
+返回：None
 
 ### 📌 set.property()
 
 此方法用于设置元素property属性。
 
-| 参数名称 | 类型 | 默认值 | 说明 |
-| -------- | ---- | ----- | ---- |
-| name     | str  | 必填  | 属性名 |
-| value    | str  | 必填  | 属性值 |
+| 参数名称 | 类型 | 默认值 | 说明                       |
+|----------|------|--------|----------------------------|
+| name     | str  | 必填   | 属性名                     |
+| value    | str  | 必填   | 属性值                     |
 
-**返回**: None
+返回：None
 
-**示例**：
+示例：
 
 ```python
 ele.set.property('value', 'Hello world!')
@@ -326,25 +326,25 @@ ele.set.property('value', 'Hello world!')
 
 此方法用于设置元素样式。
 
-| 参数名称 | 类型 | 默认值 | 说明 |
-| -------- | ---- | ----- | ---- |
-| name     | str  | 必填  | 属性名 |
-| value    | str  | 必填  | 属性值 |
+| 参数名称 | 类型 | 默认值 | 说明                       |
+|----------|------|--------|----------------------------|
+| name     | str  | 必填   | 属性名                     |
+| value    | str  | 必填   | 属性值                     |
 
-**返回**: None
+返回：None
 
 ### 📌 set.attr()
 
 此方法用于设置元素 attribute 属性。
 
-| 参数名称 | 类型 | 默认值 | 说明 |
-| -------- | ---- | ----- | ---- |
-| name     | str  | 必填  | 属性名 |
-| value    | str  | 必填  | 属性值 |
+| 参数名称 | 类型 | 默认值 | 说明                       |
+|----------|------|--------|----------------------------|
+| name     | str  | 必填   | 属性名                     |
+| value    | str  | 必填   | 属性值                     |
 
-**返回**: None
+返回：None
 
-**示例**：
+示例：
 
 ```python
 ele.set.attr('href', 'https://DrissionPage.cn')
@@ -354,13 +354,13 @@ ele.set.attr('href', 'https://DrissionPage.cn')
 
 此方法用于删除元素 attribute 属性。
 
-| 参数名称 | 类型 | 默认值 | 说明 |
-| -------- | ---- | ----- | ---- |
-| name     | str  | 必填  | 属性名 |
+| 参数名称 | 类型 | 默认值 | 说明                       |
+|----------|------|--------|----------------------------|
+| name     | str  | 必填   | 属性名                     |
 
-**返回**: None
+返回：None
 
-**示例**：
+示例：
 
 ```python
 ele.remove_attr('href')
@@ -370,22 +370,22 @@ ele.remove_attr('href')
 
 此方法用于设置元素value值。
 
-| 参数名称 | 类型 | 默认值 | 说明 |
-| -------- | ---- | ----- | ---- |
-| value    | str  | 必填  | 属性值 |
+| 参数名称 | 类型 | 默认值 | 说明                       |
+|----------|------|--------|----------------------------|
+| value    | str  | 必填   | 属性值                     |
 
-**返回**: None
+返回：None
 
 ### 📌 check()
 
 此方法用于选中或取消选中元素。
 
-| 参数名称 | 类型 | 默认值 | 说明 |
-| -------- | ---- | ----- | ---- |
-| uncheck  | bool | False | 是否取消选中 |
-| by_js    | bool | False | 是否用 js 方式选择 |
+| 参数名称 | 类型 | 默认值 | 说明                       |
+|----------|------|--------|----------------------------|
+| uncheck  | bool | False  | 是否取消选中               |
+| by_js    | bool | False  | 是否用 js 方式选择         |
 
-**返回**: None
+返回：None
 
 ## ✅️️ 执行 js 脚本
 
@@ -393,20 +393,20 @@ ele.remove_attr('href')
 
 此方法用于对元素执行 js 代码，代码中用this表示元素自己。
 
-| 参数名称 | 类型 | 默认值 | 说明 |
-| -------- | ---- | ----- | ---- |
-| script   | str  | 必填  | js 脚本文本或脚本文件路径 |
-| *args    | -    | 无    | 传入的参数，按顺序在js文本中对应arguments[0]、arguments[1]... |
-| as_expr  | bool | False | 是否作为表达式运行，为True时args参数无效 |
-| timetout | float| None  | js 超时时间（秒），为None则使用页面timeouts.script设置 |
+| 参数名称 | 类型 | 默认值 | 说明                       |
+|----------|------|--------|----------------------------|
+| script   | str  | 必填   | js 脚本文本或脚本文件路径  |
+| *args    | -    | 无     | 传入的参数，按顺序在js文本中对应arguments[0]、arguments[1]... |
+| as_expr  | bool | False  | 是否作为表达式运行，为True时args参数无效 |
+| timetout | float| None   | js 超时时间（秒），为None则使用页面timeouts.script设置 |
 
-**返回类型**: 
+| 返回类型 | 说明           |
+|----------|----------------|
+| Any      | 脚本执行结果   |
 
-- `Any`: 脚本执行结果
+注意: 要获取 js 结果记得写上return。
 
-**注意**: 要获取 js 结果记得写上return。
-
-**示例**：
+示例：
 
 ```python
 # 用执行 js 的方式点击元素
@@ -420,35 +420,35 @@ height = ele.run_js('return this.offsetHeight;')
 
 此方法用于以异步方式执行 js 代码，代码中用this表示元素自己。
 
-| 参数名称 | 类型 | 默认值 | 说明 |
-| -------- | ---- | ----- | ---- |
-| script   | str  | 必填  | js 脚本文本 |
-| *args    | -    | 无    | 传入的参数，按顺序在js文本中对应arguments[0]、arguments[1]... |
-| as_expr  | bool | False | 是否作为表达式运行，为True时args参数无效 |
+| 参数名称 | 类型 | 默认值 | 说明                       |
+|----------|------|--------|----------------------------|
+| script   | str  | 必填   | js 脚本文本                |
+| *args    | -    | 无     | 传入的参数，按顺序在js文本中对应arguments[0]、arguments[1]... |
+| as_expr  | bool | False  | 是否作为表达式运行，为True时args参数无效 |
 
-**返回**: None
+返回：None
 
 ### 📌 add_init_js()
 
 此方法用于添加初始化脚本，在页面加载任何脚本前执行。
 
-| 参数名称 | 类型 | 默认值 | 说明 |
-| -------- | ---- | ----- | ---- |
-| script   | str  | 必填  | js 脚本文本 |
+| 参数名称 | 类型 | 默认值 | 说明                       |
+|----------|------|--------|----------------------------|
+| script   | str  | 必填   | js 脚本文本                |
 
-**返回类型**: 
-
-- `str`: 添加的脚本的 id
+| 返回类型 | 说明           |
+|----------|----------------|
+| str      | 添加的脚本的 id|
 
 ### 📌 remove_init_js()
 
 此方法用于删除初始化脚本，script_id传入None时删除所有。
 
-| 参数名称 | 类型 | 默认值 | 说明 |
-| -------- | ---- | ----- | ---- |
-| script_id| str  | None  | 脚本的id，传入None时删除所有 |
+| 参数名称 | 类型 | 默认值 | 说明                       |
+|----------|------|--------|----------------------------|
+| script_id| str  | None   | 脚本的id，传入None时删除所有|
 
-**返回**: None
+返回：None
 
 ## ✅️️ 元素滚动
 
@@ -475,15 +475,15 @@ ele.scroll.to_see()
 
 这两个方法效果是一样的，用于使元素向下滚动若干像素，水平位置不变。
 
-| 参数名称 | 类型 | 默认值 | 说明 |
-| -------- | ---- | ----- | ---- |
-| pixel    | int  | 必填  | 滚动的像素 |
+| 参数名称 | 类型 | 默认值 | 说明                       |
+|----------|------|--------|----------------------------|
+| pixel    | int  | 必填   | 滚动的像素                 |
 
-**返回类型**: 
+| 返回类型       | 说明           |
+|----------------|----------------|
+| ChromiumElement| 执行滚动的元素自身 |
 
-- `ChromiumElement`: 执行滚动的元素自身
-
-**示例**：
+示例：
 
 ```python
 # 向下滚动30像素
@@ -495,15 +495,15 @@ ele.scroll.down(30)
 
 此方法用于使元素向上滚动若干像素，水平位置不变。
 
-| 参数名称 | 类型 | 默认值 | 说明 |
-| -------- | ---- | ----- | ---- |
-| pixel    | int  | 必填  | 滚动的像素 |
+| 参数名称 | 类型 | 默认值 | 说明                       |
+|----------|------|--------|----------------------------|
+| pixel    | int  | 必填   | 滚动的像素                 |
 
-**返回类型**: 
+| 返回类型       | 说明           |
+|----------------|----------------|
+| ChromiumElement| 执行滚动的元素自身 |
 
-- `ChromiumElement`: 执行滚动的元素自身
-
-**示例**：
+示例：
 
 ```python
 page.scroll.up(30)
@@ -513,37 +513,37 @@ page.scroll.up(30)
 
 此方法用于使元素内滚动条向右滚动若干像素，垂直位置不变。
 
-| 参数名称 | 类型 | 默认值 | 说明 |
-| -------- | ---- | ----- | ---- |
-| pixel    | int  | 必填  | 滚动的像素 |
+| 参数名称 | 类型 | 默认值 | 说明                       |
+|----------|------|--------|----------------------------|
+| pixel    | int  | 必填   | 滚动的像素                 |
 
-**返回类型**: 
-
-- `ChromiumElement`: 执行滚动的元素自身
+| 返回类型       | 说明           |
+|----------------|----------------|
+| ChromiumElement| 执行滚动的元素自身 |
 
 ### 📌 scroll.left()
 
 此方法用于使元素内滚动条向左滚动若干像素，垂直位置不变。
 
-| 参数名称 | 类型 | 默认值 | 说明 |
-| -------- | ---- | ----- | ---- |
-| pixel    | int  | 必填  | 滚动的像素 |
+| 参数名称 | 类型 | 默认值 | 说明                       |
+|----------|------|--------|----------------------------|
+| pixel    | int  | 必填   | 滚动的像素                 |
 
-**返回类型**: 
-
-- `ChromiumElement`: 执行滚动的元素自身
+| 返回类型       | 说明           |
+|----------------|----------------|
+| ChromiumElement| 执行滚动的元素自身 |
 
 ### 📌 scroll.to_top()
 
 此方法用于滚动到元素顶部，水平位置不变。
 
-**参数**: 无
+参数： 无
 
-**返回类型**: 
+| 返回类型       | 说明           |
+|----------------|----------------|
+| ChromiumElement| 执行滚动的元素自身 |
 
-- `ChromiumElement`: 执行滚动的元素自身
-
-**示例**：
+示例：
 
 ```python
 page.scroll.to_top()
@@ -553,56 +553,56 @@ page.scroll.to_top()
 
 此方法用于滚动到元素底部，水平位置不变。
 
-**参数**: 无
+参数： 无
 
-**返回类型**: 
-
-- `ChromiumElement`: 执行滚动的元素自身
+| 返回类型       | 说明           |
+|----------------|----------------|
+| ChromiumElement| 执行滚动的元素自身 |
 
 ### 📌 scroll.to_half()
 
 此方法用于滚动到元素垂直中间位置，水平位置不变。
 
-**参数**: 无
+参数： 无
 
-**返回类型**: 
-
-- `ChromiumElement`: 执行滚动的元素自身
+| 返回类型       | 说明           |
+|----------------|----------------|
+| ChromiumElement| 执行滚动的元素自身 |
 
 ### 📌 scroll.to_rightmost()
 
 此方法用于滚动到元素最右边，垂直位置不变。
 
-**参数**: 无
+参数： 无
 
-**返回类型**: 
-
-- `ChromiumElement`: 执行滚动的元素自身
+| 返回类型       | 说明           |
+|----------------|----------------|
+| ChromiumElement| 执行滚动的元素自身 |
 
 ### 📌 scroll.to_leftmost()
 
 此方法用于滚动到元素最左边，垂直位置不变。
 
-**参数**: 无
+参数： 无
 
-**返回类型**: 
-
-- `ChromiumElement`: 执行滚动的元素自身
+| 返回类型       | 说明           |
+|----------------|----------------|
+| ChromiumElement| 执行滚动的元素自身 |
 
 ### 📌 scroll.to_location()
 
 此方法用于滚动到元素滚动到指定位置。
 
-| 参数名称 | 类型 | 默认值 | 说明 |
-| -------- | ---- | ----- | ---- |
-| x        | int  | 必填  | 水平位置 |
-| y        | int  | 必填  | 垂直位置 |
+| 参数名称 | 类型 | 默认值 | 说明                       |
+|----------|------|--------|----------------------------|
+| x        | int  | 必填   | 水平位置                   |
+| y        | int  | 必填   | 垂直位置                   |
 
-**返回类型**: 
+| 返回类型       | 说明           |
+|----------------|----------------|
+| ChromiumElement| 执行滚动的元素自身 |
 
-- `ChromiumElement`: 执行滚动的元素自身
-
-**示例**：
+示例：
 
 ```python
 page.scroll.to_location(300, 50)
@@ -612,23 +612,23 @@ page.scroll.to_location(300, 50)
 
 此方法用于滚动页面直到元素可见。
 
-| 参数名称 | 类型 | 默认值 | 说明 |
-| -------- | ---- | ----- | ---- |
-| center   | bool | None  | 是否尽量滚动到页面正中，为None时如果被遮挡，则滚动到页面正中 |
+| 参数名称 | 类型 | 默认值 | 说明                       |
+|----------|------|--------|----------------------------|
+| center   | bool | None   | 是否尽量滚动到页面正中，为None时如果被遮挡，则滚动到页面正中 |
 
-**返回类型**: 
-
-- `ChromiumElement`: 执行滚动的元素自身
+| 返回类型       | 说明           |
+|----------------|----------------|
+| ChromiumElement| 执行滚动的元素自身 |
 
 ### 📌 scroll.to_center()
 
 此方法用于尽量把元素滚动到视口正中。
 
-**参数**: 无
+参数： 无
 
-**返回类型**: 
-
-- `ChromiumElement`: 执行滚动的元素自身
+| 返回类型       | 说明           |
+|----------------|----------------|
+| ChromiumElement| 执行滚动的元素自身 |
 
 ## ✅️️ 列表选择
 
@@ -648,7 +648,7 @@ page.scroll.to_location(300, 50)
 
 可以获取`<option>`元素，进行选取或取消选择。
 
-**示例**：
+示例：
 
 ```python
 from DrissionPage import Chromium
@@ -662,65 +662,65 @@ ele.click()
 
 这两个方法功能一样，用于按文本选择列表项。如为多选列表，可多选。
 
-| 参数名称 | 类型 | 默认值 | 说明 |
-| -------- | ---- | ----- | ---- |
-| text     | str, list, tuple | 必填  | 作为选择条件的文本，传入list或tuple可选择多项 |
-| timeout  | float| None  | 超时时间（秒），为None默认使用页面超时时间 |
+| 参数名称 | 类型 | 默认值 | 说明                       |
+|----------|------|--------|----------------------------|
+| text     | str, list, tuple | 必填   | 作为选择条件的文本，传入list或tuple可选择多项 |
+| timeout  | float| None   | 超时时间（秒），为None默认使用页面超时时间 |
 
-**返回类型**: 
-
-- `bool`: 是否选择成功
+| 返回类型 | 说明           |
+|----------|----------------|
+| bool     | 是否选择成功   |
 
 ### 📌 select.by_value()
 
 此方法用于按value属性选择列表项。如为多选列表，可多选。
 
-| 参数名称 | 类型 | 默认值 | 说明 |
-| -------- | ---- | ----- | ---- |
-| value    | str, list, tuple | 必填  | 作为选择条件的value值，传入list或tuple可选择多项 |
-| timeout  | float| None  | 超时时间（秒），为None默认使用页面超时时间 |
+| 参数名称 | 类型 | 默认值 | 说明                       |
+|----------|------|--------|----------------------------|
+| value    | str, list, tuple | 必填   | 作为选择条件的value值，传入list或tuple可选择多项 |
+| timeout  | float| None   | 超时时间（秒），为None默认使用页面超时时间 |
 
-**返回类型**: 
-
-- `bool`: 是否选择成功
+| 返回类型 | 说明           |
+|----------|----------------|
+| bool     | 是否选择成功   |
 
 ### 📌 select.by_index()
 
 此方法用于按序号选择列表项，从1开始。如为多选列表，可多选。
 
-| 参数名称 | 类型 | 默认值 | 说明 |
-| -------- | ---- | ----- | ---- |
-| index    | int, list, tuple | 必填  | 选择第几项，传入list或tuple可选择多项 |
-| timeout  | float| None  | 超时时间（秒），为None默认使用页面超时时间 |
+| 参数名称 | 类型 | 默认值 | 说明                       |
+|----------|------|--------|----------------------------|
+| index    | int, list, tuple | 必填   | 选择第几项，传入list或tuple可选择多项 |
+| timeout  | float| None   | 超时时间（秒），为None默认使用页面超时时间 |
 
-**返回类型**: 
-
-- `bool`: 是否选择成功
+| 返回类型 | 说明           |
+|----------|----------------|
+| bool     | 是否选择成功   |
 
 ### 📌 select.by_locator()
 
 此方法可用定位符筛选选项元素。如为多选列表，可多选。
 
-| 参数名称 | 类型 | 默认值 | 说明 |
-| -------- | ---- | ----- | ---- |
-| locator  | str, list, tuple | 必填  | 定位符，传入list或tuple可选择多项 |
-| timeout  | float| None  | 超时时间（秒），为None默认使用页面超时时间 |
+| 参数名称 | 类型 | 默认值 | 说明                       |
+|----------|------|--------|----------------------------|
+| locator  | str, list, tuple | 必填   | 定位符，传入list或tuple可选择多项 |
+| timeout  | float| None   | 超时时间（秒），为None默认使用页面超时时间 |
 
-**返回类型**: 
-
-- `bool`: 是否选择成功
+| 返回类型 | 说明           |
+|----------|----------------|
+| bool     | 是否选择成功   |
 
 ### 📌 select.by_option()
 
 此方法用于选中单个或多个列表项元素。如为多选列表，可多选。
 
-| 参数名称 | 类型 | 默认值 | 说明 |
-| -------- | ---- | ----- | ---- |
-| option   | ChromiumElement, List[ChromiumElement] | 必填  | `<option>`元素或它们组成的列表 |
+| 参数名称 | 类型 | 默认值 | 说明                       |
+|----------|------|--------|----------------------------|
+| option   | ChromiumElement, List[ChromiumElement] | 必填   | `<option>`元素或它们组成的列表 |
 
-**返回**: None
+返回：None
 
-**示例**：
+示例：
 
 ```python
 from DrissionPage import Chromium
@@ -735,109 +735,117 @@ select.select.by_option(option)
 
 此方法用于按文本取消选择列表项。如为多选列表，可取消多项。
 
-| 参数名称 | 类型 | 默认值 | 说明 |
-| -------- | ---- | ----- | ---- |
-| text     | str, list, tuple | 必填  | 作为选择条件的文本，传入list或tuple可选择多项 |
-| timeout  | float| None  | 超时时间（秒），为None默认使用页面超时时间 |
+| 参数名称 | 类型 | 默认值 | 说明                       |
+|----------|------|--------|----------------------------|
+| text     | str, list, tuple | 必填   | 作为选择条件的文本，传入list或tuple可选择多项 |
+| timeout  | float| None   | 超时时间（秒），为None默认使用页面超时时间 |
 
-**返回类型**: 
-
-- `bool`: 是否选择成功
+| 返回类型 | 说明           |
+|----------|----------------|
+| bool     | 是否选择成功   |
 
 ### 📌 select.cancel_by_value()
 
 此方法用于按value属性取消选择列表项。如为多选列表，可取消多项。
 
-| 参数名称 | 类型 | 默认值 | 说明 |
-| -------- | ---- | ----- | ---- |
-| value    | str, list, tuple | 必填  | 作为选择条件的value值，传入list或tuple可选择多项 |
-| timeout  | float| None  | 超时时间（秒），为None默认使用页面超时时间 |
+| 参数名称 | 类型 | 默认值 | 说明                       |
+|----------|------|--------|----------------------------|
+| value    | str, list, tuple | 必填   | 作为选择条件的value值，传入list或tuple可选择多项 |
+| timeout  | float| None   | 超时时间（秒），为None默认使用页面超时时间 |
 
-**返回类型**: 
-
-- `bool`: 是否选择成功
+| 返回类型 | 说明           |
+|----------|----------------|
+| bool     | 是否选择成功   |
 
 ### 📌 select.cancel_by_index()
 
 此方法用于按序号取消选择列表项，从1开始。如为多选列表，可取消多项。
 
-| 参数名称 | 类型 | 默认值 | 说明 |
-| -------- | ---- | ----- | ---- |
-| index    | int, list, tuple | 必填  | 选择第几项，传入list或tuple可选择多项 |
-| timeout  | float| None  | 超时时间（秒），为None默认使用页面超时时间 |
+| 参数名称 | 类型 | 默认值 | 说明                       |
+|----------|------|--------|----------------------------|
+| index    | int, list, tuple | 必填   | 选择第几项，传入list或tuple可选择多项 |
+| timeout  | float| None   | 超时时间（秒），为None默认使用页面超时时间 |
 
-**返回类型**: 
-
-- `bool`: 是否选择成功
+| 返回类型 | 说明           |
+|----------|----------------|
+| bool     | 是否选择成功   |
 
 ### 📌 select.cancel_by_locator()
 
 此方法可用定位符筛选选项元素。如为多选列表，可取消多项。
 
-| 参数名称 | 类型 | 默认值 | 说明 |
-| -------- | ---- | ----- | ---- |
-| locator  | str, list, tuple | 必填  | 定位符，传入list或tuple可选择多项 |
-| timeout  | float| None  | 超时时间，为None默认使用页面超时时间 |
+| 参数名称 | 类型 | 默认值 | 说明                       |
+|----------|------|--------|----------------------------|
+| locator  | str, list, tuple | 必填   | 定位符，传入list或tuple可选择多项 |
+| timeout  | float| None   | 超时时间，为None默认使用页面超时时间 |
 
-**返回类型**: 
-
-- `bool`: 是否选择成功
+| 返回类型 | 说明           |
+|----------|----------------|
+| bool     | 是否选择成功   |
 
 ### 📌 select.cancel_by_option()
 
 此方法用于取消选中单个或多个列表项元素。如为多选列表，可多选。
 
-| 参数名称 | 类型 | 默认值 | 说明 |
-| -------- | ---- | ----- | ---- |
-| option   | ChromiumElement, List[ChromiumElement] | 必填  | `<option>`元素或它们组成的列表 |
+| 参数名称 | 类型 | 默认值 | 说明                       |
+|----------|------|--------|----------------------------|
+| option   | ChromiumElement, List[ChromiumElement] | 必填   | `<option>`元素或它们组成的列表 |
 
-**返回**: None
+返回：None
 
 ### 📌 select.all()
 
 此方法用于全选所有项。多选列表才有效。
 
-**参数**: 无
+参数： 无
 
-**返回**: None
+返回：None
 
 ### 📌 select.clear()
 
 此方法用于取消所有项选中状态。多选列表才有效。
 
-**参数**: 无
+参数： 无
 
-**返回**: None
+返回：None
 
 ### 📌 select.invert()
 
 此方法用于反选。多选列表才有效。
 
-**参数**: 无
+参数： 无
 
-**返回**: None
+返回：None
 
 ### 📌 select.is_multi
 
 此属性返回当前元素是否多选列表。
 
-**返回类型**: `bool`
+| 返回类型 | 说明           |
+|----------|----------------|
+| bool     | 是否多选列表   |
 
 ### 📌 select.options
 
 此属性返回当前列表元素所有选项元素对象。
 
-**返回类型**: `ChromiumElement`
+| 返回类型       | 说明           |
+|----------------|----------------|
+| ChromiumElement| 所有选项元素对象 |
 
 ### 📌 select.selected_option
 
 此属性返回当前元素选中的选项（单选列表）。
 
-**返回类型**: `ChromiumElement`
+| 返回类型       | 说明           |
+|----------------|----------------|
+| ChromiumElement| 选中的选项     |
 
 ### 📌 select.selected_options
 
 此属性返回当前元素所有选中的选项（多选列表）。
 
-**返回类型**: `List[ChromiumElement]`
+| 返回类型       | 说明           |
+|----------------|----------------|
+| List[ChromiumElement]| 所有选中的选项 |
 ```
