--- a/browser_control/🛰️ 动作链.md
+++ b/browser_control/🛰️ 动作链.md
@@ -24,8 +24,8 @@ tab.actions.move_to('#su').click()
 使用 `from DrissionPage.common import Actions` 导入动作链。只要把 `WebPage` 对象或 `ChromiumPage` 对象传入即可。动作链只在这个页面上生效。
 
 | 初始化参数 | 类型 | 默认值 | 说明 |
-| --- | --- | --- | --- |
-| page | ChromiumPage, WebPage, ChromiumTab | 必填 | 动作链要操作的浏览器页面 |
+|------------|------|--------|------|
+| page       | ChromiumPage, WebPage, ChromiumTab | 必填 | 动作链要操作的浏览器页面 |
 
 说明：这种方式不会等到页面框架文档（不包括 js 数据）加载完成再执行动作。
 
@@ -67,13 +67,15 @@ tab.actions.type('some text')
 此方法用于移动鼠标到元素中点，或页面上的某个绝对坐标。当 `offset_x` 和 `offset_y` 都为 `None` 时，移动到元素中间点。当传入偏移量时，偏移量相对于元素左上角坐标。
 
 | 初始化参数 | 类型 | 默认值 | 说明 |
-| --- | --- | --- | --- |
+|------------|------|--------|------|
 | ele_or_loc | ChrmoiumElement, str, Tuple[int, int] | 必填 | 元素对象、文本定位符或绝对坐标，坐标为 `tuple(int, int)` 形式 |
-| offset_x | int | None | x 轴偏移量，向右为正，向左为负 |
-| offset_y | int | None | y 轴偏移量，向下为正，向上为负 |
-| duration | float | 0.5 | 拖动用时，传入 0 即瞬间到达 |
+| offset_x   | int  | None   | x 轴偏移量，向右为正，向左为负 |
+| offset_y   | int  | None   | y 轴偏移量，向下为正，向上为负 |
+| duration   | float| 0.5    | 拖动用时，传入0即瞬间到达 |
 
-返回类型：动作链对象本身
+| 返回类型 | 说明 |
+|----------|------|
+| Actions  | 动作链对象本身 |
 
 示例：使鼠标移动到 `ele` 元素上
 
@@ -87,12 +89,14 @@ tab.actions.move_to(ele_or_loc=ele)
 此方法用于使鼠标相对当前位置移动若干距离。
 
 | 参数名称 | 类型 | 默认值 | 说明 |
-| --- | --- | --- | --- |
-| offset_x | int | 0 | x 轴偏移量，向右为正，向左为负 |
-| offset_y | int | 0 | y 轴偏移量，向下为正，向上为负 |
-| duration | float | 0.5 | 拖动用时，传入 0 即瞬间到达 |
+|----------|------|--------|------|
+| offset_x | int  | 0      | x 轴偏移量，向右为正，向左为负 |
+| offset_y | int  | 0      | y 轴偏移量，向下为正，向上为负 |
+| duration | float| 0.5    | 拖动用时，传入0即瞬间到达 |
 
-返回类型：动作链对象本身
+| 返回类型 | 说明 |
+|----------|------|
+| Actions  | 动作链对象本身 |
 
 示例：鼠标向右移动 300 像素
 
@@ -105,10 +109,12 @@ tab.actions.move(300, 0)
 此方法用于使鼠标相对当前位置向上移动若干距离。
 
 | 参数名称 | 类型 | 默认值 | 说明 |
-| --- | --- | --- | --- |
-| pixel | int | 必填 | 鼠标移动的像素值 |
+|----------|------|--------|------|
+| pixel    | int  | 必填   | 鼠标移动的像素值 |
 
-返回类型：动作链对象本身
+| 返回类型 | 说明 |
+|----------|------|
+| Actions  | 动作链对象本身 |
 
 示例：鼠标向上移动 50 像素
 
@@ -121,10 +127,12 @@ tab.actions.up(50)
 此方法用于使鼠标相对当前位置向下移动若干距离。
 
 | 参数名称 | 类型 | 默认值 | 说明 |
-| --- | --- | --- | --- |
-| pixel | int | 必填 | 鼠标移动的像素值 |
+|----------|------|--------|------|
+| pixel    | int  | 必填   | 鼠标移动的像素值 |
 
-返回类型：动作链对象本身
+| 返回类型 | 说明 |
+|----------|------|
+| Actions  | 动作链对象本身 |
 
 示例：
 
@@ -137,10 +145,12 @@ tab.actions.down(50)
 此方法用于使鼠标相对当前位置向左移动若干距离。
 
 | 参数名称 | 类型 | 默认值 | 说明 |
-| --- | --- | --- | --- |
-| pixel | int | 必填 | 鼠标移动的像素值 |
+|----------|------|--------|------|
+| pixel    | int  | 必填   | 鼠标移动的像素值 |
 
-返回类型：动作链对象本身
+| 返回类型 | 说明 |
+|----------|------|
+| Actions  | 动作链对象本身 |
 
 示例：
 
@@ -153,10 +163,12 @@ tab.actions.left(50)
 此方法用于使鼠标相对当前位置向右移动若干距离。
 
 | 参数名称 | 类型 | 默认值 | 说明 |
-| --- | --- | --- | --- |
-| pixel | int | 必填 | 鼠标移动的像素值 |
+|----------|------|--------|------|
+| pixel    | int  | 必填   | 鼠标移动的像素值 |
 
-返回类型：动作链对象本身
+| 返回类型 | 说明 |
+|----------|------|
+| Actions  | 动作链对象本身 |
 
 示例：
 
@@ -171,11 +183,13 @@ tab.actions.right(50)
 此方法用于单击鼠标左键，单击前可先移动到元素上。
 
 | 参数名称 | 类型 | 默认值 | 说明 |
-| --- | --- | --- | --- |
-| on_ele | ChromiumElement, str | None | 要点击的元素对象或文本定位符 |
-| times | int | 1 | 点击次数 |
+|----------|------|--------|------|
+| on_ele   | ChromiumElement, str | None | 要点击的元素对象或文本定位符 |
+| times    | int  | 1      | 点击次数 |
 
-返回类型：动作链对象本身
+| 返回类型 | 说明 |
+|----------|------|
+| Actions  | 动作链对象本身 |
 
 示例：
 
@@ -188,11 +202,13 @@ tab.actions.click('#div1')
 此方法用于单击鼠标右键，单击前可先移动到元素上。
 
 | 参数名称 | 类型 | 默认值 | 说明 |
-| --- | --- | --- | --- |
-| on_ele | ChromiumElement, str | None | 要点击的元素对象或文本定位符 |
-| times | int | 1 | 点击次数 |
+|----------|------|--------|------|
+| on_ele   | ChromiumElement, str | None | 要点击的元素对象或文本定位符 |
+| times    | int  | 1      | 点击次数 |
 
-返回类型：动作链对象本身
+| 返回类型 | 说明 |
+|----------|------|
+| Actions  | 动作链对象本身 |
 
 示例：
 
@@ -205,11 +221,13 @@ tab.actions.r_click('#div1')
 此方法用于单击鼠标中键，单击前可先移动到元素上。
 
 | 参数名称 | 类型 | 默认值 | 说明 |
-| --- | --- | --- | --- |
-| on_ele | ChromiumElement, str | None | 要点击的元素对象或文本定位符 |
-| times | int | 1 | 点击次数 |
+|----------|------|--------|------|
+| on_ele   | ChromiumElement, str | None | 要点击的元素对象或文本定位符 |
+| times    | int  | 1      | 点击次数 |
 
-返回类型：动作链对象本身
+| 返回类型 | 说明 |
+|----------|------|
+| Actions  | 动作链对象本身 |
 
 示例：
 
@@ -222,10 +240,12 @@ tab.actions.m_click('#div1')
 此方法用于按住鼠标左键不放，按住前可先移动到元素上。
 
 | 参数名称 | 类型 | 默认值 | 说明 |
-| --- | --- | --- | --- |
-| on_ele | ChromiumElement, str | None | 要按住的元素对象或文本定位符 |
+|----------|------|--------|------|
+| on_ele   | ChromiumElement, str | None | 要按住的元素对象或文本定位符 |
 
-返回类型：动作链对象本身
+| 返回类型 | 说明 |
+|----------|------|
+| Actions  | 动作链对象本身 |
 
 示例：
 
@@ -238,10 +258,12 @@ tab.actions.hold('#div1')
 此方法用于释放鼠标左键，释放前可先移动到元素上。
 
 | 参数名称 | 类型 | 默认值 | 说明 |
-| --- | --- | --- | --- |
-| on_ele | ChromiumElement, str | None | 要释放的元素对象或文本定位符 |
+|----------|------|--------|------|
+| on_ele   | ChromiumElement, str | None | 要释放的元素对象或文本定位符 |
 
-返回类型：动作链对象本身
+| 返回类型 | 说明 |
+|----------|------|
+| Actions  | 动作链对象本身 |
 
 示例：移动到某元素上然后释放鼠标左键
 
@@ -254,40 +276,48 @@ tab.actions.release('#div1')
 此方法用于按住鼠标右键不放，按住前可先移动到元素上。
 
 | 参数名称 | 类型 | 默认值 | 说明 |
-| --- | --- | --- | --- |
-| on_ele | ChromiumElement, str | None | 要按住的元素对象或文本定位符 |
+|----------|------|--------|------|
+| on_ele   | ChromiumElement, str | None | 要按住的元素对象或文本定位符 |
 
-返回类型：动作链对象本身
+| 返回类型 | 说明 |
+|----------|------|
+| Actions  | 动作链对象本身 |
 
 ### 📌 `r_release()`
 
 此方法用于释放鼠标右键，释放前可先移动到元素上。
 
 | 参数名称 | 类型 | 默认值 | 说明 |
-| --- | --- | --- | --- |
-| on_ele | ChromiumElement, str | None | 要释放的元素对象或文本定位符 |
+|----------|------|--------|------|
+| on_ele   | ChromiumElement, str | None | 要释放的元素对象或文本定位符 |
 
-返回类型：动作链对象本身
+| 返回类型 | 说明 |
+|----------|------|
+| Actions  | 动作链对象本身 |
 
 ### 📌 `m_hold()`
 
 此方法用于按住鼠标中键不放，按住前可先移动到元素上。
 
 | 参数名称 | 类型 | 默认值 | 说明 |
-| --- | --- | --- | --- |
-| on_ele | ChromiumElement, str | None | 要按住的元素对象或文本定位符 |
+|----------|------|--------|------|
+| on_ele   | ChromiumElement, str | None | 要按住的元素对象或文本定位符 |
 
-返回类型：动作链对象本身
+| 返回类型 | 说明 |
+|----------|------|
+| Actions  | 动作链对象本身 |
 
 ### 📌 `m_release()`
 
 此方法用于释放鼠标中键，释放前可先移动到元素上。
 
 | 参数名称 | 类型 | 默认值 | 说明 |
-| --- | --- | --- | --- |
-| on_ele | ChromiumElement, str | None | 要释放的元素对象或文本定位符 |
+|----------|------|--------|------|
+| on_ele   | ChromiumElement, str | None | 要释放的元素对象或文本定位符 |
 
-类型：动作链对象本身
+| 返回类型 | 说明 |
+|----------|------|
+| Actions  | 动作链对象本身 |
 
 ## ✅️ 滚动滚轮
 
@@ -296,12 +326,14 @@ tab.actions.release('#div1')
 此方法用于滚动鼠标滚轮，滚动前可先移动到元素上。
 
 | 参数名称 | 类型 | 默认值 | 说明 |
-| --- | --- | --- | --- |
-| delta_y | int | 0 | 滚轮 y 轴变化值，向下为正，向上为负 |
-| delta_x | int | 0 | 滚轮 x 轴变化值，向右为正，向左为负 |
-| on_ele | ChromiumElement, str | None | 要滚动的元素对象或文本定位符 |
+|----------|------|--------|------|
+| delta_y  | int  | 0      | 滚轮 y 轴变化值，向下为正，向上为负 |
+| delta_x  | int  | 0      | 滚轮 x 轴变化值，向右为正，向左为负 |
+| on_ele   | ChromiumElement, str | None | 要滚动的元素对象或文本定位符 |
 
-返回类型：动作链对象本身
+| 返回类型 | 说明 |
+|----------|------|
+| Actions  | 动作链对象本身 |
 
 ## ✅️ 键盘按键和文本输入
 
@@ -310,10 +342,12 @@ tab.actions.release('#div1')
 此方法用于按下键盘按键。非字符串按键（如 ENTER）可输入其名称，也可以用 `Keys` 类获取。
 
 | 参数名称 | 类型 | 默认值 | 说明 |
-| --- | --- | --- | --- |
-| key | str | 必填 | 按键名称，或从 `Keys` 类获取的键值 |
+|----------|------|--------|------|
+| key      | str  | 必填   | 按键名称，或从 `Keys` 类获取的键值 |
 
-返回类型：动作链对象本身
+| 返回类型 | 说明 |
+|----------|------|
+| Actions  | 动作链对象本身 |
 
 示例：按下 ENTER 键
 
@@ -329,10 +363,12 @@ tab.actions.key_down(Keys.ENTER)  # 从Keys获取按键
 此方法用于提起键盘按键。非字符串按键（如 ENTER）可输入其名称，也可以用 `Keys` 类获取。
 
 | 参数名称 | 类型 | 默认值 | 说明 |
-| --- | --- | --- | --- |
-| key | str | 必填 | 按键名称，或从 `Keys` 类获取的键值 |
+|----------|------|--------|------|
+| key      | str  | 必填   | 按键名称，或从 `Keys` 类获取的键值 |
 
-返回类型：动作链对象本身
+| 返回类型 | 说明 |
+|----------|------|
+| Actions  | 动作链对象本身 |
 
 示例：提起 ENTER 键
 
@@ -348,10 +384,12 @@ tab.actions.key_up(Keys.ENTER)  # 从Keys获取按键
 此方法用于输入一段文本或多段文本，也可输入组合键。多段文本或组合键用列表传入。
 
 | 参数名称 | 类型 | 默认值 | 说明 |
-| --- | --- | --- | --- |
-| text | str, list, tuple | 必填 | 要输入的文本或按键，多段文本或组合键可用 `list` 或 `tuple` 传入 |
+|----------|------|--------|------|
+| text     | str, list, tuple | 必填 | 要输入的文本或按键，多段文本或组合键可用 `list` 或 `tuple` 传入 |
 
-返回类型：动作链对象本身
+| 返回类型 | 说明 |
+|----------|------|
+| Actions  | 动作链对象本身 |
 
 示例：
 
@@ -368,10 +406,12 @@ tab.actions.click('#kw').input('DrissionPage')
 此方法用于以按键盘的方式输入一段或多段文本。也可输入组合键。`type()` 与 `input()` 区别在于前者模拟按键输入，逐个字符按下和提起，后者直接输入一整段文本。
 
 | 参数名称 | 类型 | 默认值 | 说明 |
-| --- | --- | --- | --- |
-| keys | str, list, tuple | 必填 | 要输入的文本或按键，多段文本或组合键可用 `list` 或 `tuple` 传入 |
+|----------|------|--------|------|
+| keys     | str, list, tuple | 必填 | 要输入的文本或按键，多段文本或组合键可用 `list` 或 `tuple` 传入 |
 
-返回类型：动作链对象本身
+| 返回类型 | 说明 |
+|----------|------|
+| Actions  | 动作链对象本身 |
 
 示例：
 
@@ -396,11 +436,11 @@ tab.actions.type(Keys.CTRL_A)
 此方法用于等待若干秒。`scope` 为 `None` 时，效果与 `time.sleep()` 没有区别，等待指定秒数。`scope` 不为 `None` 时，获取两个参数之间的一个随机值，等待这个数值的秒数。
 
 | 参数名称 | 类型 | 默认值 | 说明 |
-| --- | --- | --- | --- |
-| second | float | 必填 | 要等待的秒数，`scope` 不为 `None` 时表示随机数范围起始值 |
-| scope | float | None | 随机数范围结束值 |
+|----------|------|--------|------|
+| second   | float| 必填   | 要等待的秒数，`scope` 不为 `None` 时表示随机数范围起始值 |
+| scope    | float| None   | 随机数范围结束值 |
 
-返回：None
+返回：`None`
 
 ## ✅️ 属性
 
@@ -408,19 +448,19 @@ tab.actions.type(Keys.CTRL_A)
 
 此属性返回使用此动作链的页面对象。
 
-类型：ChromiumBase
+类型：`ChromiumBase`
 
 ### 📌 `curr_x`
 
 此属性返回当前光标位置的 x 坐标。
 
-类型：int
+类型：`int`
 
 ### 📌 `curr_y`
 
 此属性返回当前光标位置的 y 坐标。
 
-类型：int
+类型：`int`
 
 ## ✅️ 示例
 
@@ -443,17 +483,11 @@ tab.actions.key_down(Keys.CTRL)
 tab.actions.type('a')
 # 提起 ctrl 键
 tab.actions.key_up(Keys.CTRL)
-```
 
-链式写法：
-
-```python
+# 链式写法：
 tab.actions.click('tag:input').key_down(Keys.CTRL).type('a').key_up(Keys.CTRL)
-```
 
-更简单的写法：
-
-```python
+# 更简单的写法：
 tab.actions.click('tag:input').type(Keys.CTRL_A)
 ```
 
