--- a/browser_control/🛰️ 概述.md
+++ b/browser_control/🛰️ 概述.md
@@ -17,22 +17,18 @@
 
 ```python
 from DrissionPage import Chromium
+```
 
-# 连接浏览器
+### 连接浏览器
+
+```python
 browser = Chromium()  
-# 获取标签页对象
 tab = browser.latest_tab  
-# 访问网页
 tab.get('https://www.baidu.com')  
-# 获取文本框元素对象
 ele = tab.ele('#kw')
-# 向文本框元素对象输入文本
 ele.input('DrissionPage')  
-# 点击按钮，上两行的代码可以缩写成这样
 tab('#su').click()  
-# 获取所有<h3>元素
 links = tab.eles('tag:h3')  
-# 遍历并打印结果
 for link in links:  
     print(link.text)
 ```
@@ -88,5 +84,4 @@ tab.get('https://DrissionPage.cn')
 ele1 = tab.ele('使用文档')  # 获取文本包含“使用文档”的元素
 ele2 = ele1.next()  # 获取ele1的后一个元素
 ele2.click()  # 点击该元素
-```
 ```
