--- a/browser_control/🛰️ 模式切换.md
+++ b/browser_control/🛰️ 模式切换.md
@@ -45,12 +45,12 @@ DrissionPage官网
 切换模式时只同步 cookies，不同步 headers，如果网站要求特定的 headers 才能访问，就会卡住直到超时。  
 这时可以设置`go`为`False`，切换 s 模式后再自己构造 headers 访问。
 
-| 参数名称       | 类型   | 默认值 | 说明                             |
-| -------------- | ------ | ------ | -------------------------------- |
-| mode           | `str`  | `None` | 接收's'或'd'，以切换到指定模式   |
-|                |        |        | 接收`None`则切换到与当前相对的另一个模式 |
-| go             | `bool` | `True` | 目标模式是否跳转到原模式的 url   |
-| copy_cookies   | `bool` | `True` | 切换时是否复制 cookies 到目标模式 |
+| 参数名称       | 类型  | 默认值 | 说明                                      |
+|---------------|-------|--------|-------------------------------------------|
+| mode          | str   | None   | 接收's'或'd'，以切换到指定模式             |
+|               |       |        | 接收None则切换到与当前相对的另一个模式    |
+| go            | bool  | True   | 目标模式是否跳转到原模式的 url            |
+| copy_cookies  | bool  | True   | 切换时是否复制 cookies 到目标模式         |
 
 返回：`None`
 
@@ -58,22 +58,23 @@ DrissionPage官网
 
 此方法用于复制浏览器当前页面的 cookies 到Session对象。
 
-| 参数名称        | 类型   | 默认值 | 说明                     |
-| --------------- | ------ | ------ | ------------------------ |
-| copy_user_agent | `bool` | `True` | 是否复制 user agent 信息 |
+| 参数名称         | 类型  | 默认值 | 说明                      |
+|-----------------|-------|--------|---------------------------|
+| copy_user_agent | bool  | True   | 是否复制 user agent 信息  |
 
 返回：`None`
 
 ### 📌 cookies_to_browser()
 
-此方法用于把Session对象的 cookies 复制到浏览器。  
+此方法用于把Session对象的 cookies 复制到浏览器。
+
 参数： 无  
 返回：`None`
 
 ## ✅️️ 说明
 
 主要的 api 两种模式是共用的，如`get()`，d 模式下控制浏览跳转，s 模式下控制Session对象跳转。  
-s 模式下获取的元素对象为`SessionElement`，d 模式下为`ChromiumElement`等。  
+s 模式下获取的元素对象为SessionElement，d 模式下为ChromiumElement等。  
 `post()`方法无论在哪种模式下都能使用。  
 s 模式下也能控制浏览器，但只能使用 d 模式独有功能控制。
 ```
