--- a/browser_control/🛰️ 连接浏览器.md
+++ b/browser_control/🛰️ 连接浏览器.md
@@ -3,14 +3,14 @@
 Chromium对象用于连接和管理浏览器。标签页的开关和获取、整体运行参数配置、浏览器信息获取等都由它进行。根据不同的配置，可以接管已打开的浏览器，也可以启动新的浏览器。每个浏览器只能有一个Chromium对象（同一进程中）。对同一个浏览器重复使用Chromium()获取的都是同一个对象。
 
 **Tips**  
-程序结束时，被打开的浏览器不会主动关闭（VSCode 启动的除外），以便下次运行程序时使用。 新手在使用无头模式时需注意，程序关闭后其实浏览器进程还在，只是看不见。
+程序结束时，被打开的浏览器不会主动关闭（VSCode 启动的除外），以便下次运行程序时使用。新手在使用无头模式时需注意，程序关闭后其实浏览器进程还在，只是看不见。
 
 ## ✅️ Chromium初始化参数
 
 | 初始化参数     | 类型                | 默认值 | 说明                                                                 |
 |----------------|---------------------|--------|----------------------------------------------------------------------|
-| addr_or_opts   | str, int, ChromiumOptions | None   | 浏览器启动配置或接管信息。传入 'ip: port' 字符串、端口数字或ChromiumOptions对象时按配置启动或接管浏览器；为None时使用配置文件配置启动浏览器 |
-| session_options| SessionOptions      | None   | 使用双模 Tab 时使用的默认 Session 配置，为None使用 ini 文件配置，为False不从 ini 读取 |
+| addr_or_opts   | str<br>int<br>ChromiumOptions | None   | 浏览器启动配置或接管信息。传入 'ip: port' 字符串、端口数字或ChromiumOptions对象时按配置启动或接管浏览器；为None时使用配置文件配置启动浏览器 |
+| session_options | SessionOptions      | None   | 使用双模 Tab 时使用的默认 Session 配置，为None使用 ini 文件配置，为False不从 ini 读取 |
 
 ## ✅️ 直接创建
 
