--- a/download/⤵️ 概述.md
+++ b/download/⤵️ 概述.md
@@ -2,9 +2,9 @@
 
 DrissionPage 提供了强大的文件下载管理功能。能够主动发起下载任务，也能够对浏览器触发的下载任务进行管理。
 
-## ✅️️ `download()` 方法
+## ✅️ download()方法
 
-该方法可以主动发起下载任务，提供任务管理、多线程、大文件分块、自动重连、文件名冲突处理等功能。页面对象、`<iframe>` 元素对象均支持此方法。此方法是封装 requests 实现的，下载时会自动同步 cookies。
+该方法可以主动发起下载任务，提供任务管理、多线程、大文件分块、自动重连、文件名冲突处理等功能。页面对象、`<iframe>`元素对象均支持此方法。此方法是封装 requests 实现的，下载时会自动同步 cookies。
 
 示例：
 
@@ -15,9 +15,9 @@ page = SessionPage()
 page.download('https://dldir1.qq.com/qqfile/qq/TIM3.4.8/TIM3.4.8.22092.exe')
 ```
 
-## ✅️️ 浏览器的下载任务
+## ✅️ 浏览器的下载任务
 
-浏览器页面对象、`<iframe>` 对象可对浏览器下载任务进行控制。包含以下功能：
+浏览器页面对象、`<iframe>`对象可对浏览器下载任务进行控制。包含以下功能：
 
 * 每个标签页对象可独立指定下载地址
 * 可在下载前指定重命名文件名
