--- a/download/⤵️ 浏览器下载.md
+++ b/download/⤵️ 浏览器下载.md
@@ -4,6 +4,8 @@
 
 ## ✅️ 概述
 
+### 📌 功能
+
 DrissionPage 提供以下功能，用于对浏览器下载任务进行控制：
 
 * 每个 tab 对象可独立设置文件保存路径
@@ -14,9 +16,9 @@ DrissionPage 提供以下功能，用于对浏览器下载任务进行控制：
 * 可取消任务
 * 可拦截下载任务并获取其信息
 
-## ⚠️ 注意事项
+### ⚠️ 注意事项
 
-### 📌 记得等待任务结束
+#### 📌 记得等待任务结束
 
 因技术原因，程序在下载结束时才能对其重命名，在这之前文件名是临时的任务 id。因此必需等待下载完毕，文件名才能正确命名。无论是否指定文件名都一样。
 
@@ -29,7 +31,7 @@ tab.wait.download_begin()  # 等待下载开始
 tab.wait.downloads_done()  # 等待所有任务结束
 ```
 
-### 📌 多 Tab 操作时推荐设置临时路径
+#### 📌 多 Tab 操作时推荐设置临时路径
 
 程序需要把任务下载到一个指定位置，完成后再移动到目标路径。因此，如果程序涉及多个 Tab 触发下载任务，最好给 Chromium 对象设置一个下载路径。即使每个 Tab 对象都设置了自己的路径。
 
@@ -48,26 +50,28 @@ tab2 = browser.get_tab(2)
 tab2.set.download_path('path2')
 ```
 
-### 📌 启动下载管理功能
+#### 📌 启动下载管理功能
 
-本节介绍的下载管理功能默认不开启，此时触发下载任务和手动操作没有区别。当启动配置中设置了下载路径，或调用 `set.download_path()` 方法时，管理功能才会启动。使用 `click.to_download()` 方法会自动自动此功能。
+本节介绍的下载管理功能默认不开启，此时触发下载任务和手动操作没有区别。当启动配置中设置了下载路径，或调用 `set.download_path()` 方法时，管理功能才会启动。使用 `click.to_download()` 方法会自动启动此功能。
 
 ## ✅️ click.to_download()
 
 当预期点击元素后会触发下载，可使用此方法返回下载任务。使用时可以同时设置下载路径、指定文件名名称。
 
-注意：有些下载任务是点击后弹出新标签页，在新标签页触发下载，此时必须设置 `new_tab=True`。点击后等待下载触发时间为页面对象 `timeout` 属性（默认10秒），如果需要更久的等待，用下文介绍的方法。
+**注意**：有些下载任务是点击后弹出新标签页，在新标签页触发下载，此时必须设置 `new_tab=True`。点击后等待下载触发时间为页面对象 `timeout` 属性（默认10秒），如果需要更久的等待，用下文介绍的方法。
 
 | 参数名称 | 类型   | 默认值 | 说明 |
-| -------- | ------ | ------ | ---- |
-| save_path | str/Path | 必填   | 保存路径，为 None 保存在原来设置的，如未设置保存到当前路径 |
+|----------|--------|--------|------|
+| save_path | str    | Path   | 必填 保存路径，为 None 保存在原来设置的，如未设置保存到当前路径 |
 | rename   | str    | None   | 重命名文件名，为 None 则不修改 |
 | suffix   | str    | None   | 指定文件后缀，为 None 则不修改 |
 | new_tab  | bool   | False  | 预期的下载是否在新标签页中触发 |
 | by_js    | bool   | False  | 是否用 js 方式点击，逻辑与 `click()` 一致 |
 | timeout  | float  | None   | 超时时间（秒），为 None 时使用页面对象默认超时时间 |
 
-返回类型：下载任务对象
+| 返回类型         | 说明         |
+|------------------|--------------|
+| DownloadMission  | 下载任务对象 |
 
 示例：
 
@@ -91,8 +95,8 @@ mission.wait()
 使用 Chromium 对象的 `set.download_path()` 方法设置下载路径。不设置时，默认下载到程序当前路径。Chromium 对象设置下载路径后，后续新建的 Tab 对象均会使用该路径，之前建立的 Tab 对象使用的路径则不会改变。
 
 | 参数名称 | 类型   | 默认值 | 说明 |
-| -------- | ------ | ------ | ---- |
-| path     | str/Path | 必填   | 下载路径 |
+|----------|--------|--------|------|
+| path     | str    | Path   | 必填 下载路径 |
 
 返回：None
 
@@ -122,10 +126,10 @@ tab.set.download_path(r'C:\tmp1')  # 设置 Tab 下载路径
 
 使用 `download_file_name()` 方法，可在下载前设置文件名，实现下载文件的重命名。设置的文件名可以不带后缀，程序会根据下载的文件自动补充后缀。如设置的文件名带 '.'，且后缀与网络文件不一致，程序会以网络文件的后缀为准。如果想修改后缀名，设置 `suffix` 参数即可。每次触发下载后，该设置会被清空。
 
-| 参数名称 | 类型 | 默认值 | 说明 |
-| -------- | ---- | ------ | ---- |
-| name     | str  | None   | 文件名 |
-| suffix   | str  | None   | 文件后缀名，传入 '' 可去除后缀 |
+| 参数名称 | 类型   | 默认值 | 说明 |
+|----------|--------|--------|------|
+| name     | str    | None   | 文件名 |
+| suffix   | str    | None   | 文件后缀名，传入 '' 可去除后缀 |
 
 返回：None
 
@@ -147,12 +151,16 @@ mission.wait()  # 记得等待任务触发和结束
 
 点击下载链接后，下载并不会瞬间触发，需要进行等待，才能将其捕获。使用 `wait.download_begin()` 方法等待下载开始。一般来说，标签页触发的下载任务用 Tab 对象进行等待，未被控制的标签页触发的下载，可由 Chromium 对象进行等待。`cancel_it` 参数为 True 时，捕获到任务时会将其取消，以便将返回的下载信息用于其它需要。
 
-| 参数名称 | 类型  | 默认值 | 说明 |
-| -------- | ----- | ------ | ---- |
-| timeout  | float | None   | 超时时间（秒），None 为页面默认等待时间 |
-| cancel_it | bool | False  | 是否取消该任务 |
+| 参数名称 | 类型   | 默认值 | 说明 |
+|----------|--------|--------|------|
+| timeout  | float  | None   | 超时时间（秒），None 为页面默认等待时间 |
+| cancel_it| bool   | False  | 是否取消该任务 |
 
-返回类型：等待成功且 `cancel_it` 为 False 时返回下载任务对象；等待成功且 `cancel_it` 为 True 时返回下载任务信息；等待失败返回 False
+| 返回类型         | 说明         |
+|------------------|--------------|
+| DownloadMission  | 等待成功且 `cancel_it` 为 False 时返回下载任务对象 |
+| dict             | 等待成功且 `cancel_it` 为 True 时返回下载任务信息 |
+| False            | 等待失败返回 False |
 
 示例：
 
@@ -168,23 +176,27 @@ tab.wait.download_begin()
 
 用 Chromium 对象的 `wait.downloads_done()` 方法可等待浏览器所有下载任务结束。
 
-| 参数名称 | 类型  | 默认值 | 说明 |
-| -------- | ----- | ------ | ---- |
-| timeout  | float | None   | 超时时间（秒），为 None 时无限等待 |
-| cancel_if_timeout | bool | False  | 如超时是否取消未完成的任务 |
+| 参数名称          | 类型   | 默认值 | 说明 |
+|-------------------|--------|--------|------|
+| timeout           | float  | None   | 超时时间（秒），为 None 时无限等待 |
+| cancel_if_timeout | bool   | False  | 如超时是否取消未完成的任务 |
 
-返回类型：是否等待成功
+| 返回类型 | 说明         |
+|----------|--------------|
+| bool     | 是否等待成功 |
 
 ### 📌 等待某 Tab 所有下载任务结束
 
 用 Tab 对象的 `wait.downloads_done()` 方法可等待该 Tab 对象触发点下载任务结束。
 
-| 参数名称 | 类型  | 默认值 | 说明 |
-| -------- | ----- | ------ | ---- |
-| timeout  | float | None   | 超时时间（秒），为 None 时无限等待 |
-| cancel_if_timeout | bool | False  | 如超时是否取消未完成的任务 |
+| 参数名称          | 类型   | 默认值 | 说明 |
+|-------------------|--------|--------|------|
+| timeout           | float  | None   | 超时时间（秒），为 None 时无限等待 |
+| cancel_if_timeout | bool   | False  | 如超时是否取消未完成的任务 |
 
-返回类型：是否等待成功
+| 返回类型 | 说明         |
+|----------|--------------|
+| bool     | 是否等待成功 |
 
 ## ✅️ 拦截下载任务
 
@@ -225,18 +237,18 @@ tab.download(data['url'])
 
 可获取任务状态、进度、保存路径、文件名等信息。
 
-| 属性名称     | 类型 | 说明 |
-| ------------ | ---- | ---- |
-| url          | str  | 返回任务网址 |
-| tab_id       | str  | 触发任务的 Tab 对象 id |
-| id           | str  | 任务 id |
-| folder       | str  | 保存文件夹路径 |
-| name         | str  | 文件名 |
-| tmp_path     | str  | 临时文件保存路径 |
-| state        | str  | 任务状态，'running', 'done', 'canceled', 'skipped' |
-| total_bytes  | int  | 总字节数 |
-| received_bytes | int | 已接收字节数 |
-| final_path   | str/None | 最终完整路径，任务完成后才产生 |
+| 属性名称       | 类型   | 说明 |
+|----------------|--------|------|
+| url            | str    | 返回任务网址 |
+| tab_id         | str    | 触发任务的 Tab 对象 id |
+| id             | str    | 任务 id |
+| folder         | str    | 保存文件夹路径 |
+| name           | str    | 文件名 |
+| tmp_path       | str    | 临时文件保存路径 |
+| state          | str    | 任务状态，'running', 'done', 'canceled', 'skipped' |
+| total_bytes    | int    | 总字节数 |
+| received_bytes | int    | 已接收字节数 |
+| final_path     | str    | None 最终完整路径，任务完成后才产生 |
 
 示例：实时打印任务进度。
 
@@ -250,13 +262,16 @@ while not mission.is_done:
 
 使用 DownloadMission 对象的 `wait()` 方法，可等待任务结束。
 
-| 参数名称 | 类型  | 默认值 | 说明 |
-| -------- | ----- | ------ | ---- |
-| show     | bool  | True   | 是否打印下载信息 |
-| timeout  | float | None   | 超时时间（秒），None 为无限等待 |
-| cancel_if_timeout | bool | False  | 如超时是否取消该任务 |
+| 参数名称          | 类型   | 默认值 | 说明 |
+|-------------------|--------|--------|------|
+| show              | bool   | True   | 是否打印下载信息 |
+| timeout           | float  | None   | 超时时间（秒），None 为无限等待 |
+| cancel_if_timeout | bool   | False  | 如超时是否取消该任务 |
 
-返回类型：下载完成返回最终保存路径；超时或被取消返回 False
+| 返回类型 | 说明         |
+|----------|--------------|
+| str      | 下载完成返回最终保存路径 |
+| False    | 超时或被取消返回 False |
 
 ### 📌 取消任务
 
